--- a/1부-HTTP:웹의기초/1.HTTP 개관.md
+++ b/1부-HTTP:웹의기초/1.HTTP 개관.md
@@ -1,6 +1,6 @@
 # HTTP 개관
 
--   HTTP(Hypertext Transfer Protocol)는 현대 인터넷의 공요어로 전 세계의 웹브라우저, 서버, 웹 애플리케이션은 모두 HTTP를 통해 대화합니다.
+-   HTTP(HyperText Transfer Protocol)는 현대 인터넷의 공요어로 전 세계의 웹브라우저, 서버, 웹 애플리케이션은 모두 HTTP를 통해 대화합니다.
 
 -   이번 장에서는 다음에 대해 알아보겠습니다.
     -   리소스(웹 콘텐츠)가 어디서 오는지
@@ -15,7 +15,7 @@
 
 -   HTTP는 신뢰성 있는 데이터 전송 프로토콜을 사용하기 때문에, 데이터가 지구 반대편에서 오더라도 전송 중 손상되거나 꼬이지 않음을 보장합니다.
 
--   이러한 특성 덕분에 개발자는 인터넷의 결함이나 약점에 대한 걱정 없이 애플리케이션 고우의 기능을 구현하는데 집중할 수 있습니다.
+-   이러한 특성 덕분에 개발자는 인터넷의 결함이나 약점에 대한 걱정 없이 애플리케이션 고유의 기능을 구현하는데 집중할 수 있습니다.
 
 ## 1.2 웹 클라이언트와 서버
 
@@ -57,7 +57,7 @@
 -   **MIME** 타입은 사선(/)으로 구분된 주 타입(Primary obect type)과 부 타입(specific subtype)으로 이루어진 문자열 라벨입니다.
     -   HTML로 작성된 텍스트 문서 -> text/html
     -   plain ASCII 텍스트 문서 -> text/plain
-    -   JPEG 이미지 -> iamge/jpeg
+    -   JPEG 이미지 -> image/jpeg
 
 ### 1.3.2 URI
 
@@ -69,10 +69,15 @@
 
 ### 1.3.3 URL
 
--   **통합 자원 지시자(uniform resource locator, URL)**는 리소스 식별자의 가장 흔한 형태입니다.
+- **통합 자원 지시자(uniform resource locator, URL)** 는 리소스 식별자의 가장 흔한 형태입니다.
+
+![URL](https://user-images.githubusercontent.com/13018877/50088724-2a78bc80-0247-11e9-9f59-69c1177207cf.png)
+
+<!-- 2장 참조 -->
+- URL의 자세한 내용은 2장에서 다루겠습니다.
 
 -   대부분의 URL은 세부분으로 이루어진 표준 포맷을 따릅니다.
-    -   URL의 첫 번째 부분은 **스킴(scheme)**이라고 불리닌데, 리소스에 접근하기 위해 사용되는 프로토콜을 서술합니다. (ex, http://)
+    -   URL의 첫 번째 부분은 **스킴(scheme)** 이라고 합니다. 스킴은 리소스에 접근하기 위해 사용되는 프로토콜을 서술합니다.(ex, http://)
     -   두번째 부분은 서버의 인터넷 주소를 제공합니다. (ex, www.naver.com)
     -   마지막은 웹 서버의 리소스를 가르킵니다. (ex, /specials/saw-blade.gif)
 
@@ -161,7 +166,7 @@
 
 ### 1.6.2 접속, IP 주소 그리고 포트번호
 
--   HTTP 클라이언트가 서버에 메시지를 전송할 수 있게 되기 전에, 인터넷 프로토콜(Internet protocol, IP) **주소**와 **포트번호**를 사용해 클라이언트와 서버 사이에 TCP/IP 커넥셩을 맺어야 합니다.
+-   HTTP 클라이언트가 서버에 메시지를 전송할 수 있게 되기 전에, 인터넷 프로토콜(Internet protocol, IP) **주소**와 **포트번호**를 사용해 클라이언트와 서버 사이에 TCP/IP 커넥션을 맺어야 합니다.
 
 -   HTML 리소스를 사용자에게 보여주는 순서는 다음과 같습니다.
     1. 웹브라우저는 서버의 URL에서 호스트 명을 추출합니다.
@@ -202,7 +207,7 @@
 
 -   **게이트웨이**는 주로 HTTP 트래픽을 다른 프로토콜로 변환하기 위해 사용됩니다.
 
--   예로, **HTTP/FTP 게이트웨이**는 FTP URI에 대한 HTTP 요청을 받아들인 뒤, FTP 프로토콜을 이요해 무서를 가져옵니다.
+-   예로, **HTTP/FTP 게이트웨이**는 FTP URI에 대한 HTTP 요청을 받아들인 뒤, FTP 프로토콜을 이용해 문서를 가져옵니다.
 
 <!-- 8장 링크 -->
 
