누락된 이미지 추가

--- a/1부-HTTP:웹의기초/2.URL과 리소스.md
+++ b/1부-HTTP:웹의기초/2.URL과 리소스.md
@@ -131,3 +131,6 @@ http://www.joes-hardware.com/tools.html#drills
 ```
 
 * http 서버는 일반적으로 객체의 fragment 단위가 아니라, 객체 단위로 처리하기 때문에 fragment 정보는 클라이언트에서 서버로 fragment 정보를 보내지 않습니다. 대신 브라우저가 fragment를 처리합니다. 브라우저는 http response를 받은 후 fragment을 적절한 방식으로 보여줍니다.
+
+
+<img width="705" alt="2018-12-22 3 53 22" src="https://user-images.githubusercontent.com/13018877/50371759-75f2e800-0604-11e9-9e1f-971d233f75d6.png">
