--- a/1부-HTTP:웹의기초/2.URL과 리소스.md
+++ b/1부-HTTP:웹의기초/2.URL과 리소스.md
@@ -134,3 +134,54 @@ http://www.joes-hardware.com/tools.html#drills
 
 
 <img width="705" alt="2018-12-22 3 53 22" src="https://user-images.githubusercontent.com/13018877/50371759-75f2e800-0604-11e9-9e1f-971d233f75d6.png">
+
+
+## 2.3 URL ShortCuts
+
+### 2.3.1 상대 URL
+
+* URL은 절대 URL과 상대 URL로 나뉩니다. 절대 URL은 리소스에 접근하기 위한 모든 정보를 담고 있습니다.
+* 상대 URL은 base URL을 통해서 리소스 접근에 대한 모든 정보를 얻을 수 있는 URL입니다.
+
+```
+http://www.joes-hardware.com/tools.html
+```
+
+다음과 같은 절대 URL이 있다고 하였을 때, `http://www.joes-hardware.com`을 base URL로 설정하면, 상대 URL은 `./tools.html`가 됩니다. 
+
+<img width="469" alt="2018-12-22 4 34 52" src="https://user-images.githubusercontent.com/13018877/50371926-86589200-0607-11e9-8818-cd3a5597834a.png">
+
+* 상대 URL은 장점은 URL의 길이가 짧아져 URL 정보 확인이 용이하고 중복된 정보를 작성하지 않아도 되게 해주는 장점이 있습니다.
+*  상대 URL은 스킴이나 호스트 명과 같은 부분을 포함하지 않습니다. 그렇지만, URL을 처리하는 앱은 반드시 절대 URL을 알아야 합니다. 그렇기 때문에 상대 URL은 절대 URL로 변환하는 과정을 거칩니다.
+
+#### 2.3.1.1  Base URL
+
+* 상대 URL을 절대 URL로 변경하기 위해서는 base URL이 무엇인지 알아야 합니다. base URL을 가져오는 방법은 다음과 같습니다.
+
+1. 리소스에서 명시적으로 제공 - HTML의 `<BASE>` 태그에 base URL이 명시되는 경우가 있습니다.
+1. 리소스를 포함하고 있는 base URL - 리소스의 URL을 base URL로 사용
+1. base URL이 없는 경우 - 일반적으로 상대 URL이 없는 경우를 의미합니다.
+1. 상대 참조 해석하기 - [RFC-1808](https://tools.ietf.org/html/rfc1808)에서 최초 기술되었고 [RFC-2396](https://www.ietf.org/rfc/rfc2396.txt)에 포함된 방식
+
+<img width="541" alt="2018-12-23 4 45 52" src="https://user-images.githubusercontent.com/13018877/50381754-3eeb0800-06d2-11e9-9d21-31d51150f921.png">
+
+* base URL - `http://www.joes-hardware.com/tools.html`
+* 상대 URL - `./hammers.html`
+
+1. 상대 URL은 스킴을 포함하고 있지 않기 때문에, base URL의 스킴(`http`)을 상속 받는다.
+1. base URL을 URL Component로 분해하고(2.2의 URL Component) 스킴, 호스트, 포트, 이름, 비밀번호가 비어있는지 확인한다. 이 경우에는 base URL이 스킴(`http`), 호스트명과 포트(`www.joes-hardware.com:80`)을 포함하고 있기 때문에 모든 Component가 비어 있지 않다.
+1. base URL의 스킴은 이미 상속 받았으므로, 호스트명과 포트를 추가적으로 상속 받는다.
+1. 상대 URL과 상속받은 정보를 합쳐서 `http://www.joes-hardware.com/hammers.html`을 생성한다.
+
+
+### 2.3.2 URL 확장
+
+몇몇 브라우저는 사용자 편의를 위해 URL 확장 기능을 제공합니다.
+
+#### 호스트 명 확장
+
+* 브라우저는 사용자가 전체 호스트 명을 타이핑하지 않아도 알아서 호스트명을 완성하는 기능을 가지고 있습니다. 예를 들어서 `google`이라고 주소창에 입력해도 브라우저가 `www`와 `.com` 부분을 채워줍니다. 이 기능은 프록시(캐싱)와 관련해서 문제가 생길 수도 있습니다.
+
+#### 히스토리 확장
+
+* 브라우저는 URL 입력에 대한 히스토리를 가지고 있어서, 사용자가 해당 URL을 다시 접속할 경우 자동완성 기능을 제공합니다.
