--- a/1부-HTTP:웹의기초/2.URL과 리소스.md
+++ b/1부-HTTP:웹의기초/2.URL과 리소스.md
@@ -135,7 +135,6 @@ http://www.joes-hardware.com/tools.html#drills
 
 <img width="705" alt="2018-12-22 3 53 22" src="https://user-images.githubusercontent.com/13018877/50371759-75f2e800-0604-11e9-9e1f-971d233f75d6.png">
 
-
 ## 2.3 URL ShortCuts
 
 ### 2.3.1 상대 URL
@@ -154,7 +153,7 @@ http://www.joes-hardware.com/tools.html
 * 상대 URL은 장점은 URL의 길이가 짧아져 URL 정보 확인이 용이하고 중복된 정보를 작성하지 않아도 되게 해주는 장점이 있습니다.
 *  상대 URL은 스킴이나 호스트 명과 같은 부분을 포함하지 않습니다. 그렇지만, URL을 처리하는 앱은 반드시 절대 URL을 알아야 합니다. 그렇기 때문에 상대 URL은 절대 URL로 변환하는 과정을 거칩니다.
 
-#### 2.3.1.1  Base URL
+#### Base URL
 
 * 상대 URL을 절대 URL로 변경하기 위해서는 base URL이 무엇인지 알아야 합니다. base URL을 가져오는 방법은 다음과 같습니다.
 
@@ -185,3 +184,30 @@ http://www.joes-hardware.com/tools.html
 #### 히스토리 확장
 
 * 브라우저는 URL 입력에 대한 히스토리를 가지고 있어서, 사용자가 해당 URL을 다시 접속할 경우 자동완성 기능을 제공합니다.
+
+
+### 2.4 안전하지 않은 문자
+
+* URL은 어떤 인터넷 프로토콜을 통해서든 **정보의 유실 없이 데이터가 전달**될 수 있도록 설계하는 것이 중요합니다. 
+* 안전한 전송이라는 것은 정보가 유실될 위험 없이 URL을 전송할 수 있다는 것을 의미합니다.
+
+#### 2.4.1 URL 문자 집합
+
+* 컴퓨터 시스템의 기본은 ASCII 문자 집합을 사용해왔습니다. ASCII는 문자당 7비트를 사용하여 출력되는 알파벳과 몇몇 제어 문자를 표현합니다.
+* 하지만, ASCII는 알파벳만 지원하기 때문에 URL에는 알파벳 이외의 문자를 포함시킬 수 있도록 **이스케이프 문자열**을 쓸 수 있게 지원합니다. **이스케이프 문자열**을 사용하면 안전하지 않은 문자를 안전한 문자로 인코딩합니다.
+
+#### 2.4.2 인코딩 체계
+
+* 안전하지 않은 문자열에 대한 인코딩은 퍼센트 기호(`%`)로 시작하고 두 자리 16진수로 표현됩니다.
+
+<img width="708" alt="2018-12-23 5 07 50" src="https://user-images.githubusercontent.com/13018877/50381871-4a8bfe00-06d5-11e9-96de-4a7904fd8ad1.png">
+
+#### 2.4.3 문자 제한
+
+* URL에는 미리 예약어로 사용되고 있는 문자열들이 있기 때문에 이 문자열에 대해서는 사용이 제한됩니다.
+
+<img width="712" alt="2018-12-23 5 30 16" src="https://user-images.githubusercontent.com/13018877/50382002-6ba21e00-06d8-11e9-8261-765db2e8b743.png">
+
+
+
+
