--- a/1부-HTTP:웹의기초/2.URL과 리소스.md
+++ b/1부-HTTP:웹의기초/2.URL과 리소스.md
@@ -209,5 +209,45 @@ http://www.joes-hardware.com/tools.html
 <img width="712" alt="2018-12-23 5 30 16" src="https://user-images.githubusercontent.com/13018877/50382002-6ba21e00-06d8-11e9-8261-765db2e8b743.png">
 
 
+### 2.5 스킴의 바다
 
+* 여기서는 자주 사용되는 몇 가지 스킴의 URL Component 문법에 대해 다룹니다.
+
+#### 1. http
+
+```
+http://<host>:<port>/<path>?<query>#<frag>
+```
+* http는 사용자 이름과 비밀번호만 없고 이외에는 일반 URL Component를 준수합니다.
+* 프토 값은 생략할 수 있으며, 생략되었을 경우 80번 포트를 사용합니다.
+
+#### 2. https
+
+```
+https://<host>:<port>/<path>?<query>#<frag>
+```
+* https는 http 스킴과 거의 동일하고 HTTP 연결 양 끝단에서 SSL 암호화 기능만 추가된 스킴입니다.
+* 포트는 default로 443을 사용합니다.
+
+#### 3. ftp
+
+```
+ftp://<user>:<password>@<host>:<port>/<path>;<params>
+```
+
+* ftp 스킴은 FTP 서버에 있는 파일 업/다운로드에 사용합니다.
+
+#### 4. file
+
+```
+file://<host>/<path>
+```
+
+* file 스킴은 주어진 호스트 기기에서 바로 접근할 수 있는 파일을 나타냅니다.
+
+### 2.6 미래
+
+* URL은 세상에 존재하는 모든 객체에 이름을 부여(리소스의 위치는 이름이 아니기 때문에 정확한 의미의 이름은 아닙니다)할 수 있는 강력한 도구입니다. 하지만, URL은 리소스의 위치를 기반으로 동작하기 때문에 리소스의 위치가 변경되면 URL을 더이상 사용할 수 없습니다.
+* 이에 대한 대안으로 URN(Uniform Resources Name)이 출현하였고, URN은 리소스의 위치와 관계 없이 리소스의 이름을 통해 리소스를 찾을 수 있는 새로운 도구입니다.
+* 하지만, URN은 아직 표준이 아니고, 채택 논의는 계속 진행 중입니다.
 
