--- a/1부-HTTP:웹의기초/1.HTTP 개관.md
+++ b/1부-HTTP:웹의기초/1.HTTP 개관.md
@@ -74,7 +74,7 @@
 ![URL](https://user-images.githubusercontent.com/13018877/50088724-2a78bc80-0247-11e9-9f59-69c1177207cf.png)
 
 <!-- 2장 참조 -->
-- URL의 자세한 내용은 2장에서 다루겠습니다.
+- URL의 자세한 내용은 [2장(URL과 리소스)](https://github.com/bookstars/HTTP_Definite_Guide/blob/master/1%EB%B6%80-HTTP:%EC%9B%B9%EC%9D%98%EA%B8%B0%EC%B4%88/2.URL%EA%B3%BC%20%EB%A6%AC%EC%86%8C%EC%8A%A4.md)에서 다루겠습니다.
 
 -   대부분의 URL은 세부분으로 이루어진 표준 포맷을 따릅니다.
     -   URL의 첫 번째 부분은 **스킴(scheme)** 이라고 합니다. 스킴은 리소스에 접근하기 위해 사용되는 프로토콜을 서술합니다.(ex, http://)
