--- a/2부 - HTTP 아키텍처/5. 웹 서버.md
+++ b/2부 - HTTP 아키텍처/5. 웹 서버.md
@@ -77,3 +77,43 @@ while (1) {
 
 <img width="715" alt="2019-01-22 1 10 38" src="https://user-images.githubusercontent.com/13018877/51485905-9324fd00-1de2-11e9-9b5b-44c3bd9652bd.png">
 
+## 5.3 진짜 웹 서버가 하는 일
+
+<img width="547" alt="2019-01-22 1 13 26" src="https://user-images.githubusercontent.com/13018877/51486033-f57dfd80-1de2-11e9-8b0d-364c5a777791.png">
+
+* 웹 서버가 클라이언트와 동작하는 방식은 아래 7개의 간소화된 과정을 통해 설명될 수 있습니다.
+
+1.  TCP 커넥션을 맺는다.
+2. 서버가 요청을 받는다.
+3. 서버가 요청을 처리한다.
+4. object storage에 있는 리소스에 접근한다.
+5. 응답을 만든다.
+6. 응답을 보낸다.
+7. 트랜잭션을 로그로 남긴다.
+
+## 5.4 단계 1 - 클라이언트 커넥션 수락
+
+클라이언트가 이미 서버에 대해 열려 있는 지속적 커넥션을 갖고 있으면, 클라이언트는 요청을 보내기 위해 그 커넥션을 사용할 수 있습니다. 그렇지 않으면 새 커넥션을 열어야 합니다.
+
+### 5.4.1 새 커넥션 다루기
+
+* 클라이언트가 웹 서버에 TCP 커넥션을 요청하면, 웹 서버는 그 커넥션을 맺고, TCP 커넥션에서 IP 주소를 추출하여 클라이언트가 누구인지 확인합니다.
+* 웹 서버는 어떤 커넥션이든 마음대로 거절하거나 닫을 수 있습니다. 어떤 웹 서버들은 인가되지 않은 호스트 명이나 IP 주소를 사용하는 클라이언트에 대한 커넥션을 거절하기도 합니다.
+
+### 5.4.2 클라이언트 호스트 명 식별
+
+* 대부분의 웹 서버는 역방향 DNS(reverse DNS)를 사용하여 클라이언트 IP 주소를 호스트 명으로 변환하도록 설정되어 있습니다.
+* 호스트 명 분석은 꽤 많은 시간이 걸리기 때문에, 많은 대용량 웹 서버는 특정 콘텐츠에 대해서만 이를 활성화 합니다.
+
+### 5.4.3 ident를 통해 클라이언트 사용자 알아내기
+
+* `ident` 프로토콜은 서버에게 어떤 `사용자 이름`이 HTTP 커넥션을 초기화했는지 알 수 있도록 합니다. 이는 로그 포맷에서 주로 사용됩니다.
+* 클라이언트가 `ident` 프로토콜을 지원할 경우, 다음의 과정을 통해 `ident` 커넥션이 설정됩니다.
+
+(a) 클라이언트가 HTTP 커넥션을 맺습니다.
+(b) 서버는 `ident` 커넥션을 맺습니다. 이 때, 클라이언트는 113번 포트를 listen하고 있습니다.
+(c) 서버는 113번 포트로 `사용자 이름`을 제공하도록 클라이언트에 요청을 전송합니다.
+(d) 클라이언트가 `ident` 응답을 서버로 전송합니다.
+
+<img width="601" alt="2019-01-22 1 34 59" src="https://user-images.githubusercontent.com/13018877/51487982-b605e000-1de7-11e9-89cd-c0dc54f2614c.png">
+
