--- a/2부 - HTTP 아키텍처/5. 웹 서버.md
+++ b/2부 - HTTP 아키텍처/5. 웹 서버.md
@@ -117,3 +117,140 @@ while (1) {
 
 <img width="601" alt="2019-01-22 1 34 59" src="https://user-images.githubusercontent.com/13018877/51487982-b605e000-1de7-11e9-89cd-c0dc54f2614c.png">
 
+## 5.5 단계 2 - 요청 메시지 수신
+
+* 커넥션에 데이터가 도착하면 웹 서버는 데이터를 읽고, 파싱하여 요청 메시지를 구성합니다.
+* 요청 메시지를 파싱할 때 웹 서버는 다음과 같은 작업을 수행합니다.
+
+    * 요청줄을 파싱하여 요청 메소드, URI, HTTP 버전 번호를 파악합니다. 각 값은 단일 스페이스로 구분되고, 요청줄의 마지막에는 CRLF(캐리지 리턴, line break) 문자열이 옵니다.
+    * 메시지의 헤더들을 읽습니다.
+    * 요청 본문이 있다면 읽어 들입니다.
+
+<img width="491" alt="2019-01-22 9 58 24" src="https://user-images.githubusercontent.com/13018877/51537084-df2e7b00-1e90-11e9-93fe-e36af4b86c20.png">
+
+### 5.5.1 메시지의 내부 표현
+
+<img width="669" alt="2019-01-22 9 58 31" src="https://user-images.githubusercontent.com/13018877/51537106-f3727800-1e90-11e9-9e9c-b68cc13610dc.png">
+
+* 몇몇 웹 서버는 요청 메시지를 쉽게 다룰 수 있도록 내부의 자료구조에 이를 저장합니다.(요청 메시지를 파싱 후, serialize)
+
+
+### 5.5.2 커넥션 입/출력 처리 아키텍처
+
+웹 서버는 항상 새 요청을 주시하며, 웹 서버 아키텍처에 따라 요청을 다른 방식으로 처리합니다.
+
+<img width="574" alt="2019-01-22 10 09 03" src="https://user-images.githubusercontent.com/13018877/51537613-587a9d80-1e92-11e9-8b64-dc92acd732e0.png">
+
+(a) 단일 스레드 웹 서버
+
+* 단일 스레드 웹 서버는 한 번에 하나씩 요청을 처리합니다.
+
+(b) 멀티 프로세스, 멀티 스레드 웹 서버
+
+* 들어오는 요청을 여러 개의 프로세스 혹은 스레드에 할당하여 요청을 처리합니다. 새로운 프로세스, 스레드가 너무 많이 생성되면 메모리 사용량이 과도하게 높아질 수 있습니다.
+
+(c) 다중 I/O 서버
+
+* 대량의 커넥션을 지원하기 위해 웹 서버는 여러 개의 커넥션을 열어놓고, 커넥션을 감시합니다. 그리고 커넥션의 상태 변경에 따라 요청을 처리합니다.
+
+(d) 다중 멀티 스레드 I/O 웹 서버
+
+* 멀티 스레딩과 다중 I/O를 결합하여 열려 있는 커넥션을 여러 개의 스레드가 할당 받아 요청을 처리하는 방식입니다.
+## 5.6 단계 3 - 요청 처리
+
+* 요청 처리에 대한 것은 이후 챕터에서 다룹니다.
+
+## 5.7 단계 4 - 리소스의 매핑과 접근
+
+* 웹 서버는 **리소스 서버로서 클라이언트에 콘텐츠를 전달**하기 위해 요청 메시지의 URI에 대응하여 콘텐츠를 식별해야 합니다.
+
+### 5.7.1 Docroot
+
+* 리소스 매핑의 가장 단순한 형태는 요청 URI를 웹 서버의 파일 시스템 안에 있는 파일 이름으로 사용하는 것입니다.
+* 일반적으로 웹 서버는 파일 시스템의 특별한 폴더를 웹 콘텐츠를 위해 예약해두는데 이를 `Docroot`라고 지칭합니다.
+
+<img width="575" alt="2019-01-22 10 51 28" src="https://user-images.githubusercontent.com/13018877/51539813-43a10880-1e98-11e9-9699-8eabe739af1b.png">
+
+* 위의 그림에서 클라이언트가 `./specials/saw-blade.gif` URI에 대한 요청을 할 경우, 서버는 파일 시스템에서 지정한 Docroot에 요청 URI를 붙여서(`/usr/local/httpd/files/specials/saw-blade.gif`) 파일을 반환합니다.
+
+#### 가상 호스팅된 Docroot
+
+* 가상 호스팅 웹 서버는 각 사이트의 문서 루트를 분리하여 한 개의 웹 서버를 통해 여러 개의 웹 사이트를 호스팅합니다.
+* 가상 호스팅 웹 서버는 URI나 IP 주소, 호스트 명을 통해 올바른 문서 루트를 식별합니다.
+
+<img width="603" alt="2019-01-22 10 56 19" src="https://user-images.githubusercontent.com/13018877/51540094-f1acb280-1e98-11e9-9379-65172b1d65ef.png">
+
+
+#### 사용자 홈 디렉토리 Docroot
+
+* `Docroot`를 활용하면 사용자들이 한 대의 웹 서버에서 사용자별로 서로 다른 웹 사이트를 가질 수 있도록 사용되기도 합니다.
+
+#### 5.7.2 디렉토리 목록
+
+* 일반적으로 파일이 아닌 디렉토리에 대한 요청이 들어올 경우, 디렉토리 안에 있는 `index.html`을 반환합니다. 또는 색인 파일을 반환하는 등의 설정할 수도 있습니다.
+
+#### 5.7.3 동적 콘텐츠 리소스 매핑
+
+<img width="556" alt="2019-01-22 11 02 31" src="https://user-images.githubusercontent.com/13018877/51540451-cf676480-1e99-11e9-815f-f4967352caef.png">
+
+* 웹 서버는 요청에 맞게 콘텐츠를 생성하는 프로그램을 URI에 매핑할 수 있습니다.
+* application 서버라고 불리는 웹 서버는 웹 서버를 backend application과 연결하는 역할을 합니다.
+* 아파치와 같은 웹 서버는 URI가 실행 가능한 프로그램이 위치한 디렉토리로 매핑되도록 설정하는 기능을 제공합니다.
+
+#### 5.7.4 서버사이드 인클루드(SSI)
+
+* 어떤 리소스가 SSI를 포함하고 있는 것으로 설정되어 있다면, 웹 서버는 그 리소스의 콘텐츠를 클라이언트에 보내기 전에 처리합니다.
+
+#### 5.7.5 접근 제어
+
+* 웹 서버는 각가의 리소스에 대한 접근 제어를 설정할 수 있습니다.
+
+## 5.8 단계 8 - 응답 만들기
+
+* 웹 서버는 리소스 식별 이후, 클라이언트로 응답 메시지를 반환합니다. 응답 메시지는 응답 상태 코드, 응답 헤더, 응답 본문을 포합합니다.
+
+### 5.8.1 응답 엔티티
+
+본문이 있는 응답은 일반적으로 다음을 포함합니다.
+
+*  MIME 타입을 서술하는 `Content-Type` 헤더
+* 응답 본문의 길이를 서술하는 `Content-Length` 헤더
+* 응답 본문의 내용
+
+### 5.8.2 MIME 타입 결정하기
+
+웹 서버는 응답 본문의 MIME 타입을 결정하는 책임을 가지고 있습니다. 이 때 MIME 타입을 결정하는 방법은 다음과 같습니다.
+
+* mime.types - 파일 이름의 확장자를 사용
+* 매직 타이핑 - 파일의 내용을 검사해서 타입 사용
+* 유형 명시 - 특정 파일이나 특정 디렉토리 안에 있는 파일을 확장자나 내용과 관계 없이 어떤 MIME 타입을 갖도록 설정
+* 유형 협상 - 클라이언트와 협상을 통해 특정 MIME 타입을 반환하도록 협의
+
+### 5.8.3 리다이렉션
+
+웹 서버는 리소스가 옮겨진 것을 리다이렉션 응답을 통해 표현할 수 있습니다.
+
+####  Case - 영구히 리소스가 옮겨진 경우
+
+* 리소스에 새로운 URI가 부여되어 새로운 위치로 옮겨지거나, 이름이 바뀌었을 경우 웹 서버는 301 Moved Permanently 상태 코드를 반환합니다.
+
+####  Case - 임시로 리소스가 옮겨진 경우
+
+* 303 See Other, 307 Temporary Redirect 상태 코드를 반환합니다.
+
+####  Case  - URL 증강
+
+* 웹 서버는 문맥 정보를 포함하기 위해 상태 정보를 포함한 새로운 URL로 사용자를 리다이렉트 할 수 있습니다.
+
+####  Case  - 부하 균형
+
+* 서버가 과도한 요청을 받으면, 부하가 덜 한 서버로 요청을 리다이렉트 할 수 있습니다.
+
+####  Case  - 친밀한 다른 서버가 있을 때
+
+* 웹 서버는 사용자 정보를 갖고 있는 다른 웹 서버로 클라이언트를 리다이렉트할 수 있습니다.
+
+####  Case  - 디렉토리 이름 정규화
+
+* 클라이언트 요청에서 URI의 마지막 빗금(/)이 빠져있다면, 웹 서버는 클라이언트를 이를 추가한 URI로 리다이렉트합니다.
+
