--- a/2부 - HTTP 아키텍처/5. 웹 서버.md
+++ b/2부 - HTTP 아키텍처/5. 웹 서버.md
@@ -254,3 +254,6 @@ while (1) {
 
 * 클라이언트 요청에서 URI의 마지막 빗금(/)이 빠져있다면, 웹 서버는 클라이언트를 이를 추가한 URI로 리다이렉트합니다.
 
+## 5.9 단계 6 - 응답 보내기
+
+* 웹 서버는 커넥션을 상태를 추적하며 모든 메시지를 전송하면, 커넥션을 닫습니다.
