--- a/1부-HTTP:웹의기초/4.커넥션 관리.md
+++ b/1부-HTTP:웹의기초/4.커넥션 관리.md
@@ -147,6 +147,8 @@
 
 - 이러한 느린 시작은 TCP가 한 번에 전송할 수 있는 패킷의 수를 제한합니다.
 
+- 확인 응답을 받고 난 이후에 보낼 수 있는 패킷의 양이 늘어납니다.
+
 - 이러한 혼잡 제어 기능 때문에, 새로운 커넥션은 이미 어느 정도 데이터를 주고 받은 튜닝된 커넥션 보다 느립니다. 때문에 HTTP는 이미 존재하는 커넥션을 재사용하는 기능이 있습니다.
 
 ### 4.2.6 네이글(Nagle) 알고리즘과 TCP_NODELAY
