오타 및 문장 수정

--- a/2부 - HTTP 아키텍처/6. 프락시.md
+++ b/2부 - HTTP 아키텍처/6. 프락시.md
@@ -5,7 +5,7 @@
 -   HTTP 프락시와 웹 게이트웨어 비교, HTTP 프락시가 어떻게 배치되는지 그림으로 설명
 -   몇 가지 유용한 활용법
 -   프락시가 실제 네트워크에 어떻게 배치되어 있는지 그리고 트래픽이 어떻게 프락시 서버로 가게 되는지 설명
--   HTTP 프락시 요청이 서버 요청과 어떻게 다른지, 그리고 프락시가 어떻게 브라우저의 동작을 미묘하게 바꾸는지 보여준다.
+-   HTTP 프락시 요청이 서버 요청과 어떻게 다른지, 그리고 프락시가 어떻게 브라우저의 동작을 미묘하게 바꾸는지 보여줍니다.
 -   일련의 프락시 서버들을 통과하는 메시지의 경로를, Via 헤더와 TRACE 메서드를 이용해 기록하는 방법을 설명합니다.
 -   프락시에 기반한 HTTP 접근 제어를 설명합니다.
 -   어떻게 프락시가 클라이언트와 서버 사이에서 각각의 다른 기능과 버전 들을 지원하면서 상호작용 할 수 있는지 설명한다.
@@ -25,7 +25,7 @@
 -   개인 프락시: 프락시 서버를 하나의 클라이언트가 독점적으로 사용합니다.
 -   공용 프락시: 여러 클라이언트가 함께 사용하는 프락시 입니다.
 
-### 6.1.2 프락시 대 게이트웨이
+### 6.1.2 프락시 VS 게이트웨이
 
 #### 프락시
 
@@ -58,7 +58,7 @@
 
 #### 보안 방화벽
 
--   조직 안에 들어오고 나가는 응용 레벨 프로트콜의 흐름을 한 지점에서 통제할 수 있습니다. 이 지점에서 트랙픽을 살펴보는 후크(hook)를 제공 하여 보안을 강화 할 수 있습니다.
+-   조직 안에 들어오고 나가는 응용 레벨 프로트콜의 흐름을 한 지점에서 통제할 수 있습니다. 이 지점에서 트랙픽을 살펴보는 ```후크(hook)```를 제공 하여 보안을 강화 할 수 있습니다.
 
 <img width="509" alt="2019-01-26 9 49 27" src="https://user-images.githubusercontent.com/44794974/51787366-4bbcb900-21b4-11e9-98aa-b350203fbb89.png">
 
@@ -80,7 +80,7 @@
 
 #### 콘텐츠 라우터
 
--   프락시 서버는 인터넷 트랙픽 조건과 콘텐층의 종류에 따라 요청을 특정 웹 서버로 유토하는 콘텐츠 라우터로 동작할 수 있습니다.
+-   프락시 서버는 인터넷 트랙픽 조건과 콘텐층의 종류에 따라 요청을 특정 웹 서버로 유도하는 콘텐츠 라우터로 동작할 수 있습니다.
 
 ## 6.3 프락시는 어디에 있는가?
 
@@ -216,7 +216,7 @@
 
 클라이언트는 자신이 어떤 프락시와 대화하고 있음을 항상 알고 있는것은 아닙니다. 왜냐면 대리 프락시나 인터셉트 프락시는 클라이언트가 알지 못하게 설정 되어 있기 때문입니다. 그러므로 해당 프락시는 완전한 URI를 받지 못할 것입니다.
 
--   대리 프락시는 앞에서 설명한 바와 같이 원 서버의 호스트 명과 아이피 주소를 사용해 원 서버를 대신하는 프락시 서버입니다.(한 서버에 하나의 프락시로 부분 URI를 받아도 상관이 없습니다.)
+-   대리 프락시는 앞에서 설명한 바와 같이 원 서버의 호스트 명과 IP 주소를 사용해 원 서버를 대신하는 프락시 서버입니다.(한 서버에 하나의 프락시로 부분 URI를 받아도 상관이 없습니다.)
 
 -   인터셉트 프락시는 네트워크 흐름에서 클라이언트에서 서버로 가는 트래픽을 가로채 캐시된 응답을 돌려주는 등의 일을 하는 프락시 서버입니다.(클라이언트에서 서버로 가는 트래팩을 가로채기 때문에, 웹 서버로 보내는 부분 URI을 얻게 됩니다.)
 
@@ -285,7 +285,7 @@ Via 헤더 필드는 쉽표로 구분된 경유지(waypoint)의 목록입니다.
 
 -   중개자가 받은 프로토콜 입니다.
 -   프로토콜 이름은 버전 앞에 "/"로 구분되어 붙습니다.
--   비 HTTP 프로토콜은 게이트웨이가 다른 프로토콜(HTTPS, FTP 등)을 위해 HTTP 요청에 접솔 할 때 발생 할 수 있습니다.
+-   비 HTTP 프로토콜은 게이트웨이가 다른 프로토콜(HTTPS, FTP 등)을 위해 HTTP 요청에 접속 할 때 발생 할 수 있습니다.
 
 #### 프로토콜 버전
 
