--- a/2부 - HTTP 아키텍처/6. 프락시.md
+++ b/2부 - HTTP 아키텍처/6. 프락시.md
@@ -2,7 +2,7 @@
 
 이번 장에서는 다음에 대해 알아봅니다.
 
--   HTTP 프락시와 웹 게이트웨어 비교, HTTP 프락시가 어떻게 배치되는지 그림으로 설명
+-   HTTP 프락시와 웹 게이트웨이 비교, HTTP 프락시가 어떻게 배치되는지 그림으로 설명
 -   몇 가지 유용한 활용법
 -   프락시가 실제 네트워크에 어떻게 배치되어 있는지 그리고 트래픽이 어떻게 프락시 서버로 가게 되는지 설명
 -   HTTP 프락시 요청이 서버 요청과 어떻게 다른지, 그리고 프락시가 어떻게 브라우저의 동작을 미묘하게 바꾸는지 보여줍니다.
@@ -15,8 +15,8 @@
 -   **웹 프락시 서버**는 클라이언트의 입장에서 트랜잭션을 수행하는 중개인입니다.
 -   HTTP 프락시 서버는 **웹 서버**이기도 하고 **웹 클라이언트**이기도 합니다.
 
-    -   **웹 서버** 역활: HTTP 클라이언트의 요청을 받고, 반드시 웹 서버처럼 요청과 커넥션을 적절히 다르고 응답을 돌려주어야 합니다.
-    -   **웹 클라이언트** 역활: 클라이언트의 요청을 서버로 보내고, 서버의 응답을 받습니다.
+    -   **웹 서버** 역할: HTTP 클라이언트의 요청을 받고, 반드시 웹 서버처럼 요청과 커넥션을 적절히 다루고 응답을 돌려주어야 합니다.
+    -   **웹 클라이언트** 역할: 클라이언트의 요청을 서버로 보내고, 서버의 응답을 받습니다.
 
     <img width="585" alt="2019-01-26 9 25 14" src="https://user-images.githubusercontent.com/44794974/51787109-eadfb180-21b0-11e9-9460-242c70ba3f52.png">
 
@@ -31,14 +31,14 @@
 
 -   같은 프로토콜을 사용하는 둘 이상의 애플리케이션을 연결합니다.
 
-#### 게이트웨어
+#### 게이트웨이
 
 -   서로 다른 프로토콜을 사용하는 둘 이상의 애플리케이션을 연결합니다.
 -   서로 다른 프로토콜을 말하더라도, 서로 간의 트랜잭션을 완료할 수 있도록 프로토콜 변환기 처럼 사용됩니다.
 
 <img width="595" alt="2019-01-26 9 32 25" src="https://user-images.githubusercontent.com/44794974/51787185-e7005f00-21b1-11e9-8f5a-0183cca88c0f.png">
 
--   하지만, 브라우저와 서버는 다른 버전의 HTTP를 구현하기 때문에, 프락시도 약간의 프로토콜 변환을 한다는 점에서 게이트웨이와의 차이점은 모호합니다.
+-   하지만, 브라우저와 서버는 다른 버전의 HTTP를 구현하기 때문에, 프락시도 약간의 프로토콜 변환을 한다는 점에서 프락시와 게이트웨이와의 차이점은 모호합니다.
 
 ## 6.2 왜 프락시를 사용하는가?
 
@@ -108,6 +108,8 @@
 
 -   ISP는 다운로드 속도를 개선, 인터넷 대역폭 비용을 줄이기 위해 캐시 프락시를 사용
 
+> ISP - 인터넷 서비스 제공자(Internet Service Provider; ISP)는 인터넷에 접속하는 수단을 제공하는 주체를 가르키는 말이다.
+
 #### 대리 프락시
 
 -   대리 프락시는 웹 서버들의 바로 앞에 있어 모든 요청을 처리할 수 있습니다.
@@ -142,13 +144,13 @@
 
     -   부하 균형: 자식 프락시는 부하를 분산하기 위해 현재 부모들의 작업량 수준에 근거하여 부모 프락시를 고릅니다.
 
-    -   지리적 인접성에 근거한 라우팅: 자식 프락시는 원 서버의 지경을 담당하는 부모를 선택할 수 있습니다.
+    -   지리적 인접성에 근거한 라우팅: 자식 프락시는 원 서버의 지역을 담당하는 부모를 선택할 수 있습니다.
 
     -   프로토콜/타입 라우팅: 자식 프락시는 URI에 근거하여 다른 부모나 원 서버로 라우팅 할 수 있습니다.
 
 ### 6.3.3 어떻게 프락시가 트래픽을 처리하는가
 
-클라이언트 트래픽이 프락시로 가도록 만드는 방법에는 다음 네 가기가 있습니다.
+클라이언트 트래픽이 프락시로 가도록 만드는 방법에는 다음 네 가지가 있습니다.
 
 -   클라이언트를 수정
 
@@ -227,7 +229,7 @@
 완전 URI와 부분 URI를 사용하는 규칙은 다음과 같습니다.
 
 -   완전한 URI가 주어졌다면, 프락시는 그것을 사용해야 합니다.
--   부분 URI가 주어졌고 Host 해더가 있다면, Host 헤더를 이요해 원 서버의 이름과 포트 번호를 알아내야 합니다.
+-   부분 URI가 주어졌고 Host 해더가 있다면, Host 헤더를 이용해 원 서버의 이름과 포트번호를 알아내야 합니다.
 -   부분 URI가 주어졌으나 Host헤더가 없다면, 다음의 방법으로 원 서버를 알아내야 합니다.
     -   프락시가 원 서버를 대신하는 대리 프락시라면, 프락시에 실제 서버의 주소와 프트번호가 설정되어 있을 수 있다.
     -   이전에 어떤 인터셉트 프락시가 가로챘던 트래픽을 받았고, 그 인터셉트 프락시가 원 IP 주소와 포트번호를 사용할 수 있도록 해두었다면, 그 IP 주소와 포트번호를 사용할 수 있다.
@@ -235,9 +237,9 @@
 
 ### 6.5.5 전송 중 URI 변경
 
-프락시 서버는 요청 URI읩 변경에 매우 신경을 써야 합니다. 사소한 URI 변경이라도 다운스트림 서버와 상호운용성 문제를 일으킬 수 있기 때문 입니다.
+프락시 서버는 요청 URI의 변경에 매우 신경을 써야 합니다. 사소한 URI 변경이라도 다운스트림 서버와 상호운용성 문제를 일으킬 수 있기 때문 입니다.
 
-### 6.5.6 URI 클라이언트 자동확장과 흐스트 명 분석(Hostname Resolution)
+### 6.5.6 URI 클라이언트 자동확장과 호스트 명 분석(Hostname Resolution)
 
 브라우저는 프락시의 존재 여부에 따라 요청 URI를 다르게 분석합니다.
 
@@ -247,7 +249,7 @@
 
 -   프락시가 있는 경우
 
-    브라우저의 URI가 프락시를 그냥 지나쳐버리기 때문데 '자동확장'을 수행할 수 없습니다.
+    브라우저의 URI가 프락시를 그냥 지나쳐버리기 때문에 '자동확장'을 수행할 수 없습니다.
 
 ## 6.6 메시지 추적
 
