--- a/2부 - HTTP 아키텍처/8. 통합점 - 게이트웨이, 터널, 릴레이.md
+++ b/2부 - HTTP 아키텍처/8. 통합점 - 게이트웨이, 터널, 릴레이.md
@@ -56,3 +56,38 @@
 * 이 경우에는 게이트웨이와 원 서버 사이에 암호화하지 않은 트래픽을 전송하므로 네트웨크 안전성이 보장되어야 합니다.
 
 <img width="610" alt="f5" src="https://user-images.githubusercontent.com/13018877/53298212-727f1580-386e-11e9-8d29-ae9f4de3a768.png">
+
+## 8.3 리소스 게이트웨이
+
+* 게이트웨이의 가장 일반적인 형태는 애플리케이션 서버입니다.
+* 애플리케이션 서버는 HTTP를 통해서 클라이언트와 통신하고, 서버 측에 있는 애플리케이션 프로그램에 연결하는 서버 측 게이트웨이입니다.
+
+<img width="641" alt="f6" src="https://user-images.githubusercontent.com/13018877/53298320-7a8b8500-386f-11e9-89e7-26b3ead53ee0.png">
+
+* 애플리케이션 서버는 게이트웨이의 `API(Application Programming Interface)`를 통해서 요청을 서버에서 동작하고 있는 애플리케이션에 전달합니다.
+
+* 클라이언트 A와 애플리케이션 서버 사이의 동작
+
+1. 클라이언트 A의 요청을 받으면 디지털 카메라 애플리케이션에 요청이 전송됩니다.
+2. HTTP 응답 메시지는 카메라 이미지를 감싸 클라이언트로 전송합니다.
+3. 브라우저(클라이언트)는 이미지를 보여줍니다.
+
+### 8.3.1 공용 게이트웨이 인터페이스(CGI, Common Cateway Interface)
+
+* CGI는 특정 URL에 대한 HTTP 요청에 따라 프로그램을 실행하고, 프로그램의 출력을 수집하여 이를 HTTP 응답으로 회신하는데 웹 서버가 사용하는 표준화된 인터페이스 집합을 의미합니다.
+
+1. 게이트웨이를 통해야 받을 수 있는 리소스 요청이 들어옵니다.
+2. 서버는 헬퍼 애플리케이션(프로세스)을 생성하여 요청을 처리합니다.
+3. 헬퍼 애플리케이션은 데이터를 전달 받고, 클라이언트로 전달할 응답이나 응답 데이터를 서버로 반환합니다.
+
+<img width="482" alt="f7" src="https://user-images.githubusercontent.com/13018877/53302527-48dfe180-38a2-11e9-8bf8-a79b8a3c362f.png">
+
+* CGI 애플리케이션은 서버와 분리되어 있어서 다양한 언어로 구현할 수 있고, 거의 모든 HTTP 서버가 이를 지원합니다.
+* CGI는 사용자에게 내부적으로 어떤 처리를 하는지 알려주지 않습니다.
+* CGI는 모든 CGI 요청마다 프로세스를 만들어서 부하가 큽니다. 이에 대한 대안으로 Fast CGI(프로세스가 아닌 데몬으로 동작)와 같은 것들이 만들어졌습니다.
+
+### 8.3.2 서버 확장 API
+
+* 서버 자체의 동작을 바꾸고 싶거나, 서버의 처리능력을 최고치로 끌어 올리고자 할 경우 CGI 애플리케이션을 거치는 것은 성능 향상에 제약이 될 수 있습니다.
+* 서버 확장 API는 웹 개발자가 **자신의 모듈을 HTTP와 직접 연결할 수 있는 강력한 인터페이스**입니다.
+* 서버 확장 API는 프로그래머가 자신의 코드를 서버에 연결하거나 서버의 컴포넌트를 자신이 만든 것으로 교체할 수 있도록 합니다.
