--- a/2부 - HTTP 아키텍처/8. 통합점 - 게이트웨이, 터널, 릴레이.md
+++ b/2부 - HTTP 아키텍처/8. 통합점 - 게이트웨이, 터널, 릴레이.md
@@ -91,3 +91,59 @@
 * 서버 자체의 동작을 바꾸고 싶거나, 서버의 처리능력을 최고치로 끌어 올리고자 할 경우 CGI 애플리케이션을 거치는 것은 성능 향상에 제약이 될 수 있습니다.
 * 서버 확장 API는 웹 개발자가 **자신의 모듈을 HTTP와 직접 연결할 수 있는 강력한 인터페이스**입니다.
 * 서버 확장 API는 프로그래머가 자신의 코드를 서버에 연결하거나 서버의 컴포넌트를 자신이 만든 것으로 교체할 수 있도록 합니다.
+
+## 8.4 애플리케이션 인터페이스와 웹 서비스
+
+* 애플리케이션을 연결하면서 생기는 까다로운 이슈 중 하나는 **데이터를 교환하려는 두 애플리케이션 사이에서 프로토콜 인터페이스를 맞추는 일**입니다.
+* 인터넷 커뮤니티는 웹 애플리케이션이 서로 통신하는데 사용할 표준과 프로토콜 집합을 개발하였습니다.
+* 웹 서비스는 원래 웹 애플리케이션 그 자체를 의미하지만, 웹 애플리케이션의 통신에 사용되는 표준을 지칭하게 되었습니다.(애플리케이션이 정보를 공유하는데 사용하는 새로운 메커니즘)
+* 웹 서비스는 SOAP를 통해 XML을 사용하여 정보를 교환하고, 이러한 교환에는 SOAP(Simple Object Access Protocol, HTTP 메시지에 XML 데이터를 담는 방식)가 표준으로 사용됩니다.
+
+## 8.5 터널
+
+* 웹 터널은 HTTP 프로토콜을 지원하지 않는 애플리케이션에 HTTP 애플리케이션을 사용하여 접근하는 방법을 제공합니다.
+
+### 8.5.1 Connect로 HTTP 터널 커넥션 맺기
+
+* 웹 터널은 HTTP의 Connect 메소드로 커넥션을 맺습니다.
+
+<img width="610" alt="f8" src="https://user-images.githubusercontent.com/13018877/53428620-748fd280-3a2e-11e9-9587-226115fc43dd.png">
+
+1. 클라이언트는 게이트웨이에 터널을 연결하고자 Connect 요청을 전송합니다.(SSL 연결이므로 443번 포트 사용)
+2. TCP 커넥션이 생성됩니다.
+3. TCP 커넥션이 생성되면, 게이트웨이는 클라이언트에 200 OK 응답은 전달합니다.
+4. 이 시점부터 터널은 연결되었고, 클라이언트의 모든 데이터는 TCP 커넥션을 통해 서버로 전달되고, 서버의 데이터도 해당 커넥션을 통해 클라이언트로 전달됩니다.
+
+### 8.5.2 데이터 터널링, 시간 커넥션 관리
+
+* 클라이언트는 성능을 높이기 위해 Connect 요청을 보내고 응답을 받기 전에 터널 데이터를 전송할 수도 있습니다.
+* 게이트웨이는 커넥션이 맺어지면 읽어들인 모든 데이터를 서버로 전송합니다.
+
+### 8.5.3 SSL 터널링
+
+* 웹 터널은 원래 80번 포트의 HTTP만 허용하는 방화벽을 통해서 암호화된 SSL 트래픽(443 포트)을 전달하기 위해 만들어진 기능입니다.
+
+<img width="599" alt="f9" src="https://user-images.githubusercontent.com/13018877/53429756-91c5a080-3a30-11e9-81fb-9b8cc25837bb.png">
+
+* 웹 터널이 있으면 SSL 트래픽이 HTTP 메시지에 암호화된 데이터를 담고, 일반 HTTP 채널을 통해서 데이터를 전달할 수 있도록 합니다.
+
+<img width="635" alt="f10" src="https://user-images.githubusercontent.com/13018877/53429757-925e3700-3a30-11e9-82e1-dc7dc6efa043.png">
+
+### 8.5.4 SSL 터널링 vs HTTP/HTTPS 게이트웨이
+
+* HTTP/HTTPS 게이트웨이는 앞서 살펴본 것처럼(8.2.2) 클라이언트의 HTTPS 요청을 복호화해서 원 서버로 HTTP 메시지를 전달하는 응답 프락시입니다.
+
+<img width="606" alt="f4" src="https://user-images.githubusercontent.com/13018877/53298211-f97fbe00-386d-11e9-91ec-3cb52915f45b.png">
+
+* HTTP/HTTPS 게이트웨이를 사용하는 것은
+
+    1. 클라이언트와 게이트웨이 사이에는 HTTP로 통신하여 보안이 취약
+    2. 응답 프락시(게이트웨이)가 인증을 담당하여 원 서버에 SSL 클라이언트 인증을 직접 수행할 수 없음
+    3. 게이트웨이가  SSL을 완벽히 지원
+
+위의 문제를 감수하거나, 요구 조건을 충족해야 합니다.
+
+이 상황에서 SSL 터널링을 사용하면 프락시에 SSL을 구현할 필요가 없고, SSL 커넥션(TCP 커넥션)은 클라이언트와 원 서버와 이뤄지므로 보안에 더 좋습니다.(프락시들은 암호화된 데이터를 HTTP 채널로 전달하는 역할만 수행)
+
+
+~~8.6 릴레이 - HTTP 명세를 준수하지 않는 간단한 HTTP 프락시로, 자세히 알 필요는 없어 보임~~
