--- a/2부 - HTTP 아키텍처/7. 캐시.md
+++ b/2부 - HTTP 아키텍처/7. 캐시.md
@@ -63,6 +63,7 @@
 
 * 캐시는 캐시된 사본의 재검사가 필요할 때, 원 서버에 작은 재검사 요청을 보냅니다. 재검사 요청 도구로 주로 If-Modified-Since 헤더 도구가 자주 사용됩니다.
 
+* If-Modified-Since가 GET요청에 있을 경우, 캐시된 시간 이후에 변경된 경우에만 사본을 보내달라는 의미가 됩니다.
 
 ```
 GET /announce.html HTTP/1.0
@@ -84,7 +85,7 @@ Expires: Fri, 05 Jul 2002, 05:00:00 GMT
 
 <img  width="547" src="https://gitlab.com/jibot/http_guide/uploads/73ff58bc1817fed7fcb75e2542a345fe/7.1.png">
 
-* 서버 객체가 캐시된 사본과 다르다면, 서버는 컨텐츠 전체와 함께 평범한 HTTP 200 OK 응답을 클라이언트에게 보냅니다.
+* 서버 객체가 캐시된 사본과 다르다면, 서버는 콘텐츠 전체와 함께 평범한 HTTP 200 OK 응답을 클라이언트에게 보냅니다.
 
 * 서버 객체가 삭제되었다면, 서버는 404 Not Found 응답을 돌려보내며, 캐시는 사본을 삭제합니다.
 
@@ -121,6 +122,8 @@ Expires: Fri, 05 Jul 2002, 05:00:00 GMT
 * 개인만을 위한 캐시로 한 명의 사용자가 자주 찾는 페이지를 담습니다.
 
 * 웹 브라우저는 개인 전용 캐시를 내장합니다.
+
+* 대부분의 브라우저는 자주 쓰이는 문서를 개인용 컴퓨터의 디스크와 메모리에 캐시해 놓고, 사용자가 캐시 사이즈와 설정을 수정할 수 있도록 허용합니다. 
 
 <img  width="547" src="https://gitlab.com/jibot/http_guide/uploads/d3cf6fdf09b0303f0386177e8da1d319/7.3.png">
 
@@ -251,6 +254,8 @@ Expires: Fri, 05 Jul 2002, 05:00:00 GMT
 
 * 문서가 주어진 날짜 이후로 변경되지 않았다면 서버는 작은 304 Not Modified 응답 메시지를 보내줍니다.
 
+* 'IMS'헤더는 서버 응답 헤더의 Last-Modified 헤더와 함께 동작하며, 원 서버는 제공하는 문서에 최근 변경 일시를 붙입니다.
+
 <img  width="547" src="https://gitlab.com/jibot/http_guide/uploads/8935bb5490360337568463e5b216f5bc/7.9.png">
 
 ### 7.8.6 If-None-Match: 엔터티 태그 재검사
@@ -279,7 +284,7 @@ If-None-March: "foobar","A34FAC0095","Profiles in Courage"
 
 * 약한 검사기는 어느 정도 콘텐츠 변경을 허용합니다.
 
-* 약한 엔터티 태그는 대응하는 엔터티에 유의미한 변경이 있을 때마다 같이 변경되어야 합니다.
+* 약한 엔터티 태그는 대응하는 엔터티에 유의미한 변경이 있을 때만 변경됩니다.
 
 * 서버는 'W/' 접두사로 약한 검사기를 구분합니다.
 
@@ -397,4 +402,4 @@ If-None-Match: W/"v2.6"
 
 * 서버는 캐시가 서버에게 보고해야 하기 전까지 문서를 제공할 수 있는 횟수나 소모할 수 있는 처리시간을 제어할 수 있습니다. 이를 사용량 제한이라고 부릅니다.
 
-* 사용량 제한은 캐시가 원 서버에게 보고하기 전에 캐시된 리소스가 얼마나 많이 사용될 수 있는지 서버가 제어할 수 있게 해줍니다. 
+* 사용량 제한은 캐시가 원 서버에게 보고하기 전에 캐시된 리소스가 얼마나 많이 사용될 수 있는지 서버가 제어할 수 있게 해줍니다.
