--- a/2부 - HTTP 아키텍처/8. 통합점 - 게이트웨이, 터널, 릴레이.md
+++ b/2부 - HTTP 아키텍처/8. 통합점 - 게이트웨이, 터널, 릴레이.md
@@ -26,7 +26,7 @@
 ```
 
 * 서버 측 게이트웨이 - 클라이언트와 HTTP로 통신하고, 서버와는 외래 프로토콜로 통신
-* 클라이언트 측 게이트웨이 - 클라이언트와 외래 프로토콜로 서버와는 HTTP로 통신
+* 클라이언트 측 게이트웨이 - 클라이언트와 외래 프로토콜로 통신하고, 서버와는 HTTP로 통신
 
 ## 8.2 프로토콜 게이트웨이
 
@@ -40,7 +40,7 @@
 
 * 서버측 웹 게이트웨이는 클라이언트로부터 HTTP 요청이 서버로 들어오는 시점에 HTTP 요청을 외래 프로토콜로 전환합니다.
 
-* 다음 그림에서는 게이트웨이는 클라이언트로부터 HTTP 요청을 받고, FTP 프로토콜을 통해서 객체를 가져옵니다.
+* 다음 그림에서 게이트웨이는 서버와 FTP 커넥션을 연결하고, 클라이언트로부터 HTTP 요청을 받아 FTP 프로토콜을 통해서 객체를 가져옵니다.
 
 <img width="615" alt="f3" src="https://user-images.githubusercontent.com/13018877/53298178-69da0f80-386d-11e9-8af8-3dce507680d0.png">
 
@@ -53,7 +53,7 @@
 ### 8.2.2 HTTPS/HTTP: 클라이언트 측 보안 가속 게이트웨이
 
 * 게이트웨이는 웹 서버의 앞단에 위치하여 HTTPS 요청을 복호화하고, 웹 서버에는 HTTP 요청을 보내는 역할을 수행하기도 합니다.
-* 이 경우에는 게이트웨이와 원 서버 사이에 암호화하지 않은 트래픽을 전송하므로 네트웨크 안전성이 보장되어야 합니다.
+* 이 경우에는 게이트웨이와 원 서버 사이에 암호화하지 않은 트래픽을 전송하므로 네트워크 안전성이 보장되어야 합니다.
 
 <img width="610" alt="f5" src="https://user-images.githubusercontent.com/13018877/53298212-727f1580-386e-11e9-8d29-ae9f4de3a768.png">
 
