--- a/3부 - 식별, 인가, 보안/11. 클라이언트 식별과 쿠키.md
+++ b/3부 - 식별, 인가, 보안/11. 클라이언트 식별과 쿠키.md
@@ -16,3 +16,18 @@
 3. 사용자 로그인 인증을 통한 사용자 식별
 4. URL에 식별자를 포함하는 기술인 fat URL
 5. 식별 정보를 지속해서 유지하는 쿠키
+
+## 11.2 HTTP 헤더
+
+* From 헤더 - 사용자의 이메일 주소를 포함합니다. 악의적인 서버가 주소를 모아 스팸메일을 보내는 경우가 많아 From 헤더를 보내는 브라우저가 많지는 않습니다. 주로 크롤러가 데이터 수집시 자신에 대한 정보를 식별할 수 있도록 하는데 사용됩니다.
+* User-Agent 헤더 - 사용자가 사용하고 있는 브라우저의 이름과 정보, 혹은 운영체제애 대한 정보도 포함합니다.
+
+```
+User-Agent: <product> / <product-version> <comment>
+
+// 크롬
+Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/51.0.2704.103 Safari/537.36
+
+// 사파리
+Mozilla/5.0 (iPhone; CPU iPhone OS 10_3_1 like Mac OS X) AppleWebKit/603.1.30 (KHTML, like Gecko) Version/10.0 Mobile/14E304 Safari/602.1
+```
