--- a/3부 - 식별, 인가, 보안/11. 클라이언트 식별과 쿠키.md
+++ b/3부 - 식별, 인가, 보안/11. 클라이언트 식별과 쿠키.md
@@ -31,3 +31,53 @@ Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/51
 // 사파리
 Mozilla/5.0 (iPhone; CPU iPhone OS 10_3_1 like Mac OS X) AppleWebKit/603.1.30 (KHTML, like Gecko) Version/10.0 Mobile/14E304 Safari/602.1
 ```
+
+## 11.3 클라이언트 IP 주소
+
+사용자 식별에 클라이언트 IP 주소를 사용할 수 있습니다. 하지만, 다음과 같은 문제점 때문에 이를 사용하지 않습니다.
+
+* 클라이언트 IP 주소는 사용자가 아니라 사용자의 컴퓨터를 지칭합니다. 여러 사람이 동일한 컴퓨터를 사용하면 각각의 사용자를 구분할 수 없습니다.
+* 많은 인터넷 서비스 제공자(ISP)들은 사용자가 로그인시 동적으로 IP 주소를 할당합니다. 로그인 시간에 따라 사용자는 매번 다른 주소를 받으므로 웹 서버는 클라이언트 IP 주소로 사용자를 식별할 수 없습니다.
+* 많은 사용자가 보안을 강화하고, 부족한 주소를 관리하기 위해 네트워크 주소 변환(Network Address Translation, NAT) 방화벽을 통해 인터넷을 사용합니다. 이 NAT 장비들은 클라이언트의 실제 IP 주소를 방화벽 뒤로 숨기어 클라이언트 IP 주소로 사용자를 식별하기 어렵습니다.
+* HTTP 프락시와 게이트웨이는 원 서버에 새로운 TCP 연결을 합니다. 그래서 웹 서버는 클라이언트 IP 주소 대신 프락시 서버의 IP 주소를 바라봅니다. 이런 경우에는 클라이언트 IP 주소로 사용자를 식별할 수 없습니다.
+
+## 11.4 사용자 로그인
+
+웹 서버는 사용자에게 사용자 이름과 비밀번호를 요구하여 명시적으로 식별을 요청할 수 있습니다. 로그인을 수월하게 만들기 위해 HTTP는 `WWW-Authenticate`, `Authorization` 헤더를 이용하여 로그인을 진행하는 자체적인 체계를 가지고 있습니다. 브라우저는 사용자가 로그인이 필요한 서비스에 접근할 경우, 로그인 대화상자를 보여주고, 로그인 수행시 다음 요청부터 `Authorization` 헤더에 그 정보를 기술하여 보냅니다.
+
+<img width="615" alt="스크린샷 2019-03-24 오후 6 28 21" src="https://user-images.githubusercontent.com/13018877/54877465-a09e4800-4e62-11e9-84ff-f1074d9697a3.png">
+
+1. 브라우저는 www.joes-hardware.com 사이트로 요청을 보냅니다.
+2. 사이트는 사용자의 식별정보를 알지 못 하므로, `401 Login Required` 응답 코드와 `WWW-Authenticate` 헤더를 반환하여 로그인을 요청합니다.
+3. 사용자가 사용자 이름과 비밀번호를 입력하고, 브라우저는 기존 요청을 다시 보냅니다.
+4. 이 요청이 성공적으로 처리되면, 브라우저는 서버로부터 사용자 식별 정보를 요청 받으면 자동으로 사용자 이름과 비밀번호를 포함하여 서버로 요청을 전달합니다.(이 때 요청마다 사용자의 식별정보 토큰을 Authorization 헤더에 담아서 전송)
+
+## 11.5 뚱뚱한 URL
+
+어떤 웹 사이트들은 사용자의 URL마다 버전을 기술하여 사용자를 식별하고 추적하였습니다.
+
+```html
+<a href="/exec/obidos/tg/browse/-/229220/ref=gr_gifts/002-1145265-8016838">All
+Gifts</a>
+<a href="/exec/obidos/wishlist/ref=gr_pl1_/002-1145265- 8016838">Wish List</a>
+<a href="http://s1.amazon.com/exec/varzea/tg/armed-forces/- //ref=gr_af_/002-1145265-
+8016838">Salute Our Troops</a>
+<a href="/exec/obidos/tg/browse/-/749188/ref=gr_p4_/002- 1145265-8016838">Free
+Shipping</a>
+<a href="/exec/obidos/tg/browse/-/468532/ref=gr_returns/002- 1145265-8016838">Easy
+  Returns</a>
+```
+
+* 사용자가 웹 사이트를 처음 방문하면 유일한 ID가 생성되고, 이는 URL에 추가(위의 경우 `002-1145265-8016838`와 같은 형태)되어 서버는 클라이언트를 이 뚱뚱한 URL로 리다이렉트 시킵니다. 
+* 뚱뚱한 URL은 아래와 같은 몇 가지 문제점이 있습니다.
+
+    1.  못생긴 URL - 브라우저에 보이는 뚱뚱한 URL은 새로운 사용자에게 혼란을 줄 수 있습니다.
+    1.  공유하지 못 하는 URL - 뚱뚱한 URL은 특정 사용자와 세션에 대한 상태 정보를 포함하기 때문에, 다른 사람과 해당 URL을 공유할 경우 개인정보가 유출될 수 있습니다.
+    1.  캐시 사용 불가 - URL이 계속 변경되므로 URL을 통한 캐시가 불가능합니다.
+    1. 서버 부하 가중 - 서버는 뚱뚱한 URL에 해당하는 HTML 페이지를 다시 그려야 합니다.
+    1. 이탈 - 사용자는 서비스를 사용하는 동안 사전에 세션 정보가 추가된 링크만 사용해야 뚱뚱한 URL이 올바르게 동작합니다. 세션 정보가 없는 링크를 사용하게 되면, 의도치 않게 URL 세션에서 이탈하기 쉽습니다.
+    1. 세션 간 지속성 부재 - 사용자가 뚱뚱한 URL을 북마킹하지 않는 이상 로그아웃시 모든 정보를 사라집니다.
+
+
+
+
