--- a/3부 - 식별, 인가, 보안/11. 클라이언트 식별과 쿠키.md
+++ b/3부 - 식별, 인가, 보안/11. 클라이언트 식별과 쿠키.md
@@ -78,6 +78,48 @@ Shipping</a>
     1. 이탈 - 사용자는 서비스를 사용하는 동안 사전에 세션 정보가 추가된 링크만 사용해야 뚱뚱한 URL이 올바르게 동작합니다. 세션 정보가 없는 링크를 사용하게 되면, 의도치 않게 URL 세션에서 이탈하기 쉽습니다.
     1. 세션 간 지속성 부재 - 사용자가 뚱뚱한 URL을 북마킹하지 않는 이상 로그아웃시 모든 정보를 사라집니다.
 
+## 11.6 쿠키
 
+* 쿠키는 사용자를 식별하고 세션을 유지하는 방식 중에서 현재까지 가장 널리 사용되는 방식입니다.
+* 쿠키만으로 하기 힘든 것들은 앞서서 설명한 기술들과 함께 사용하여 쿠키를 다방면에서 활용합니다.
+* 쿠키는 캐시와 충돌할 수 있어서, 대부분의 캐시나 브라우저는 쿠키에 있는 내용을 캐시하지 않습니다.
 
+### 11.6.1 쿠키의 타입
 
+* 세션 쿠키 - 사용자가 사이트를 탐색할 때, 관련한 설정과 선호 사항들을 저장하는 임시 쿠키입니다. 세션 쿠키는 사용자가 브라우저를 닫으면 삭제됩니다.
+* 지속 쿠키 - 지속 쿠키는 디스크에 저장되어 브라우저를 닫거나 컴퓨터를 재시작해도 남아 있는 쿠키입니다. 지속 쿠키는 사용자가 주기적으로 방문하는 사이트에 대한 설정 정보나 로그인 이름을 유지하려고 사용합니다.
+* 세션 쿠키와 지속 쿠키의 유일한 차이점은 **파기 시점**뿐입니다.
+
+### 11.6.2 쿠키는 어떻게 동작하는가
+
+1. 사용자가 웹 사이트에 방문하면 웹 서버는 사용자에 대해 아는 것이 없습니다.
+2. 웹 서버는 사용자가 다음번 접속시 해당 사용자를 식별하기 위해 응답으로 쿠키를 할당합니다. 이 때, 쿠키는 `이름=값` 형태의 리스트 형태이고, `Set-Cookie`라는 HTTP 응답 헤더에 기술됩니다. 쿠키는 어떠한 정보도 포함할 수 있습니다.
+
+```
+Set-cookie: id="34294"; domain="Joes-hardware.com"
+```
+
+브라우저는 `Set-Cookie` 헤더에 있는 쿠키 콘텐츠를 브라우저 쿠키 데이터베이스에 저장합니다. 
+
+3. 사용자가 미래에 동일한 사이트 방문시 브라우저는 서버가 이 사용자에게 할당했던 쿠키를 Cookie 요청 헤더에 기술하여 전송합니다.
+
+<img width="617" alt="스크린샷 2019-03-27 오전 12 27 07" src="https://user-images.githubusercontent.com/13018877/55010155-13582080-5027-11e9-910a-8a38d9c8ddf2.png">
+
+### 11.6.3 쿠키 상자 - 클라이언트 측 상태
+
+브라우저는 쿠키 정보를 저장할 책임이 있는데 이 시스템을 **클라이언트 측 상태**라고 합니다. 쿠키 명세에서 이것의 공식적인 이름은 **HTTP 상태 관리 체계(HTTP State Management Mechanism)** 입니다.
+
+#### 구글 크롬 쿠키
+
+* 브라우저는 각기 다른 방식으로 쿠키를 저장합니다.
+
+<img width="1485" alt="스크린샷 2019-03-27 오전 12 45 41" src="https://user-images.githubusercontent.com/13018877/55011876-e5281000-5029-11e9-8a12-d3ef2c2a7d2a.png">
+
+* Name - 쿠키의 이름
+* Value - 쿠키의 값
+* Path - 쿠키와 관련된 도메인에 있는 경로
+* Expires - 쿠키의 파기 시점을 알려주는 값, `Jan 1, 1970 00:00:00 GMT`로부터 파기될 시간을 초 단위로 기술
+* Secure - SSL 커넥션에서만 해당 쿠키를 보낼지 판단
+
+#### 사파리 쿠키
+<img width="1516" alt="스크린샷 2019-03-27 오전 12 46 27" src="https://user-images.githubusercontent.com/13018877/55011875-e5281000-5029-11e9-9f85-6e6def5938bf.png">
