--- a/3부 - 식별, 인가, 보안/11. 클라이언트 식별과 쿠키.md
+++ b/3부 - 식별, 인가, 보안/11. 클라이언트 식별과 쿠키.md
@@ -123,3 +123,91 @@ Set-cookie: id="34294"; domain="Joes-hardware.com"
 
 #### 사파리 쿠키
 <img width="1516" alt="스크린샷 2019-03-27 오전 12 46 27" src="https://user-images.githubusercontent.com/13018877/55011875-e5281000-5029-11e9-9f85-6e6def5938bf.png">
+
+### 11.6.4 사이트마다 각기 다른 쿠키들
+
+브라우저는 수백 수천 개의 쿠키를 가지고 있을 수 있지만, 보통 각 사이트에 두 개 혹은 세 개의 쿠키만 보냅니다.
+
+* 쿠키를 모두 전달할 경우 성능이 크게 저하됩니다.(콘텐츠의 바이트보다 더 큰 쿠키를 전달할 우려가 있음)
+* 쿠키의 대부분은 서버에 특화된 이름/값 쌍을 포함하여, 대부분의 사이트에서는 인식하지 못 하는 무의미한 값입니다.
+* 특정 사이트에서 제공하는 정보를 신뢰하지 않는 사이트에서 가져갈 수 있기 때문에 모든 웹 서버에 쿠키를 전달하는 것은 잠재적인 개인정보 문제를 일으킬 수 있습니다.
+
+<img width="608" alt="스크린샷 2019-03-27 오후 11 50 07" src="https://user-images.githubusercontent.com/13018877/55086248-65fb1080-50eb-11e9-94a1-e7c4aaed2452.png">
+
+보통 브라우저는 쿠키를 생성한 서버에게만 쿠키에 담긴 정보를 전달합니다. 이 특징의 대표적인 예외는 웹 서버 업체가 광고 업체와 계약하여 쿠키를 활용하는 경우입니다. 많은 광고는 웹 사이트의 일부인 것처럼 제작되어 지속 쿠키를 생성합니다. 즉, 같은 광고사에서 제공하는 서로 다른 웹 사이트에 사용자가 방문하면, 브라우저는 지속 쿠키를 광고사 서버로 전송합니다. 이러한 지속 쿠키와 Referer 헤더를 접목하면 광고사는 사용자의 웹 사용 습관에 대한 방대한 데이터 베이스를 구축할 수 있습니다.
+
+#### 쿠키 Domain 속성
+
+서버는 쿠키를 생성할 때 `Set-Cookie` 응답 헤더에 Domain 속성을 기술하여 어떤 사이트가 그 쿠키를 읽을 수 있는지 제어할 수 있습니다.
+
+```
+Set-Cookie: user="mary17"; domain="airtravelbargains.com"
+```
+
+#### 쿠키 Path 속성
+
+Path 속성을 활용하면 웹 사이트의 일부에만 쿠키를 적용할 수 있습니다.
+
+```
+Set-Cookie: pref=compact; domain="airtravelbargains.com"; path=/autos/
+
+http://www. airtravelbargains.com/speical.html
+Response - Cookie: user="mary17"
+
+http://www. airtravelbargains.com/autos/index.html
+Response - Cookie: user="mary17", Cookie: pref=compact
+```
+
+### 11.6.5 쿠키 구성요소
+
+현재 사용되는 쿠키 명세는 Version 0 쿠키가 있습니다.(Version 1 쿠키는 deprecated)
+
+### 11.6.6 Version 0(넷스케이프) 쿠키
+
+최초의 쿠키 명세는 넷스케이프가 정의하였고, 이 Version 0 쿠키는 `Set-Cookie` 응답 헤더와 `Cookie` 요청 헤더에 쿠키 조작에 필요한 필드들을 정의하였습니다.
+
+#### Version 0 Set-Cookie 응답 헤더
+
+* `이름=값` - 필수 속성으로 이름과 값 모두 큰따옴표로 감싸지 않은 세미콜론, 쉼표, 등호, 공백을 포함하지 않는 문자열입니다. 어떤 `이름=값` 조합이든 만들 수 있습니다.
+
+```
+Set-Cookie: customer=Mary
+```
+
+
+* Expires - 쿠키의 생명주기를 가리키는 날짜 문자열을 기술 합니다.(`요일, DD-MM-YY HH:MM:SS GMT` 형태)
+
+```
+Set-Cookie: customer=Mary; expires=Wednesday, 09-Nov-99 23:12:40 GMT
+```
+
+* Domain - 이 속성에 기술된 도메인을 사용하는 서버 호스트명으로만 쿠키를 전송합니다. `. com`, `.kr`과 같은 형식으로 작성하는 것을 방지하기 위해, 최소 두 개에서 세 개 영역을 가지는 도메인을 기술해야 합니다.
+
+```
+Set-Cookie: customer=Mary; domain="joes-hardware.com"
+```
+
+* Path - 서버의 특정 문서에만 쿠키를 할당할 수 있도록 해줍니다.
+
+```
+Set-Cookie: customer=Mary; domain="joes-hardware.com" path=/autos/
+```
+
+* Secure - 이 속성이 포함되어 있으면 쿠키는 SSL 보안 연결을 사용할 때만 쿠키를 전송합니다.
+
+```
+Set-Cookie: customer=Mary; secure
+```
+
+#### Version 0 Cookie 요청 헤더
+
+클라이언트가 서버에 요청을 보낼 때는 Domain, Path, Secure 필터가 맞으면서, 현재 파기되지 않은 쿠키들을 함께 보냅니다.
+
+```
+Cookie: session-id=002-114321; session-id-time=1007884800
+```
+
+### 11.6.7 Version 1(RFC 2965) 쿠키
+
+deprecated 되어 생략
+
