--- a/3부 - 식별, 인가, 보안/11. 클라이언트 식별과 쿠키.md
+++ b/3부 - 식별, 인가, 보안/11. 클라이언트 식별과 쿠키.md
@@ -211,3 +211,43 @@ Cookie: session-id=002-114321; session-id-time=1007884800
 
 deprecated 되어 생략
 
+### 11.6.8 쿠키와 세션 추적
+
+아마존과 같은 곳들은 쇼핑카트를 유지하기 위해 세션 쿠키를 활용합니다. 그 방식은 아래와 같습니다.
+
+a. 브라우저가 Amazon.com에 처음 요청합니다.
+b. 서버는 클라이언트를 전자상거래 소프트웨어 URL로 리다이렉트 시킵니다.
+c. 클라이언트는 리다이렉트 URL로 요청을 보냅니다.
+d. 서버는 응답에 2 개의 세션 쿠키(`session-id`,`session-id-time`)을  기술하여 다시 리다이렉트 응답을 클라이언트로 전송합니다.
+e.  클라이언트는 이 쿠키를 요청 헤더에 기술하여 다시 리다이렉트된 URL로 요청을 보냅니다.
+f. 서버는 home.html로 리다이렉트하는 응답을 보내고, 이 때 쿠키 2개(`ubid-main`, `x-main`)를 더 첨부합니다.
+g. 클라이언트는  home.html로 첨부된 4개의 쿠키를 기술하여 요청을 보냅니다.
+h. 서버에서 콘텐츠를 내려줍니다.
+
+<img width="605" alt="스크린샷 2019-03-28 오전 12 59 26" src="https://user-images.githubusercontent.com/13018877/55091758-c2aef900-50f4-11e9-997e-088e57fa0b63.png">
+
+### 11.6.9 쿠키와 캐싱
+
+쿠키 캐싱에는 많은 주의가 필요합니다. 잘못하면 이전 사용자의 쿠키가 다른 사용자에게 할당되거나, 누군가의 개인정보가 다른 사람에게 노출되는 상황이 발생할 수 있습니다.
+
+#### 캐시되지 말아야 할 문서가 있다면 표시하라
+
+* 캐시되지 말아야 하는 문서는 문서 작성자가 가장 잘 알기 때문에, 명시적으로 `Cache-Control: no-cache="SetCookie"`를 기술하여 명확히 표시하는 것이 필요합니다.
+
+#### Set-Cookie 헤더를 캐시하는 것에 유의하라
+
+* 어떤 캐시는 응답을 저장하기 전에 Set-Cookie를 제거합니다. 이런 경우에는 캐시가 모든 요청을 재검사하여 클라이언트로 가는 응답에 Set-Cookie 헤더 값을 기술하여 문제를 개선할 수 있습니다.
+
+```
+Cache-Control: must-revalidate, max-age=0
+```
+
+#### Cookie 헤더를 가지고 있는 요청에 유의하라
+
+* 결과 콘텐츠가 개인 정보를 담고 있을 수 있기 때문에, 캐싱에 유의해야 합니다.
+* 보수적인 캐시는 Cookie 헤더가 포함된 요청에 응답으로 오는 문서는 캐시하지 않습니다. 
+
+### 11.6.10 쿠키, 보안 그리고 개인정보
+
+* 원격 데이터베이스에 개인 정보를 저장하고, 해당 데이터의 키 값을 쿠키에 저장하는 방식을 사용하면 예민한 개인정보가 오가는 것을 줄일 수 있습니다.
+* 가장 많은 쿠키 오용은 지속 쿠키 사용에서 오기 때문에, 지속 쿠키 사용시에는 항상 조심하는 것이 좋습니다.
