--- a/2부 - HTTP 아키텍처/9. 웹 로봇.md
+++ b/2부 - HTTP 아키텍처/9. 웹 로봇.md
@@ -6,7 +6,7 @@
 
 ## 9.1 크롤러와 크롤링
 
--   웹 크롤러는, 먼저 웹페이지를 한 개 가져오고, 그 다음 그 페이지가 가르키는 모든 웹 페이지를 가져오는 재귀적 반복을 통해 웹을 순회하는 로봇입니다.
+-   웹 크롤러는, 먼저 웹페이지를 한 개 가져오고, 그 다음 그 페이지가 가리키는 모든 웹 페이지를 가져오는 재귀적 반복을 통해 웹을 순회하는 로봇입니다.
 
 ### 9.1.1 어디에서 시작하는가: '루트 집합(root set)'
 
@@ -18,11 +18,11 @@
 
     -   A를 시작으로 크롤링을 시작한다면 연결된 링크를 통해 J와 K까지 갈 수는 있지만, G와 N으로 가는 링크는 없습니다.
 
-    -   그러므로 해당 링크들을 모두 크롤링 하기 위해서는 **루트 집합**에 A,G,S가 있어야 합니다.
+    -   그러므로 해당 링크들을 모두 크롤링 하기 위해서는 **루트 집합**을 A,G,S가 있어야 합니다.
 
 ### 9.1.2 링크 추출과 상대 링크 정상화
 
--   크롤러가 HTML 문서를 탐색할때 새로운 링크를 찾게 되면, 크롤링할 페이지 목록에 추가하게 됩니다.
+-   크롤러가 HTML 문서를 탐색할때 시로운 링크를 찾게 되면, 크롤링할 페이지 목록에 추가하게 됩니다.
 
 -   이 때, 링크가 상대 링크로 되있을 경우 **절대 링크**로 변환할 필요가 있습니다.
 
@@ -49,12 +49,12 @@
         -   크롤러가 갑자기 중단되었을 경우, 방문한 URL의 목록이 디스크에 저장되었는지 확인합니다.
 
     -   파티셔닝
-        -   웹이 성장하면서, 한 대의 컴퓨터에서 하나의 크롤링이 완수하는 것은 불가능 해졌습니다.
+        -   웹이 성장하면서, 한 대의 컴퓨터에서 하나의 크롤링이 완수하는 것은 불강능 해졌습니다.
         -   대규모 웹 크롤러는, 각각이 분리된 한 대의 컴퓨터인 크롤러가 동시에 다른 '한 부분'을 할당하여 책임을 지도록 해야 합니다.
 
 ### 9.1.6 별칭(alias)과 로봇 순환
 
--   URL이 별칭을 가질 수 있는 이상 어떤 페이지를 이전에 방문 했었는지 말해주는 게 쉽지 않을 때도 있습니다.
+-   URL이 별칭을 가질 수 있는 이상, 어떤 페이지를 이전에 방문 했었는지 말해주는 게 쉽지 않을 때도 있습니다.
 
       <img width="581" alt="2019-03-02 4 30 06" src="https://user-images.githubusercontent.com/44794974/53678886-772d4900-3d08-11e9-9894-447846d7eeab.png">
 
@@ -72,12 +72,12 @@
 
 -   하지만 각 웹 서버에 대한 지식 없이 크롤러가 d에서 f까지의 문제는 중복을 피할 수 없습니다.
     -   d 케이스: 웹 서버가 대소문자를 구분하는지 알아야 합니다.
-    -   e 케이스: URL들이 같은 리소스를 가리키는지 알려면 이 디렉터리에 대한 웹 서버의 색인 페이지 설정을 알아야 합니다.
+    -   e 케이스: URL들이 같은 리소스를 가리키는지 알려면 이 디렉토리에 대한 웹 서버의 색인 페이지 설정을 알아야 합니다.
     -   f 케이스: URL의 IP 주소가 같은 물리적 컴퓨터를 참조한다는 것뿐 아니라, 웹 서버가 가상 호스팅을 하도록 설정되어 있는지도 알아야 합니다.
 
 ### 9.1.8 파일 시스템 링크 순환
 
--   파일 시스템의 심벌릭 링크는 사실상 아무것도 존재하지 않으면서도 끝없이 깊어지는 디렉터리 계층을 만들 수 있기 때문에, 매우 교묘한 종류의 순환을 유발할 수 있습니다.
+-   파일 시스템의 심벌릭 링크는 사실상 아무것도 존재하지 않으면서도 끝없이 깊어지는 디렉토리 계층을 만들 수 있기 때문에, 매우 교묘한 종류의 순환을 유발할 수 있습니다.
 
       <img width="182" alt="2019-03-03 11 18 22" src="https://user-images.githubusercontent.com/44794974/53690018-181e1180-3da6-11e9-86c5-f636cfa3ecbd.png">
 
@@ -96,7 +96,7 @@
 
 ~~### 9.1.9 동적 가상 웹 공간~~ -> 가상 URL을 만들어 크롤러를 교착 상태로 빠진다는 말을 장황하게 써두었습니다.
 
-### 9.1.10 루프와 중복 피하기
+### 9.1.10
 
 -   정규화
 
@@ -106,9 +106,9 @@
 
     -   방문할 URL들을 깊이 우선 방식보다 너비 우선 방식을 사용한다면 순환의 영향을 최소화 할 수 있습니다.
 
--   스로틀링
+-   스토틀링
 
-    -   크롤러가 웹 사이트에서 일정 시간 동안 가져올 수 있는 페이지의 숫자를 제한합니다.
+    -   로봇이 웹 사이트에서 일정 시간 동안 가져올 수 있는 페이지의 숫자를 제한합니다.
 
 -   URL 크기 제한
 
@@ -123,16 +123,16 @@
 
     -   파일 시스템의 심벌릭 링크를 통한 순환과 그와 비슷한 오설정들은 일정 패턴을 따르는 경향이 있습니다.
     -   ex, 위 순환 참조와 같이 /subdir/subdir/subdir/index.html
-    -   그러므로, 이러한 주기가 2이상 반복될 경우 감지하여 방지합니다.
+    -   그러므로, 이러한 주기가 2회 이상 반복될 경우, 패턴을 감지하여 순환을 방지합니다.
 
 -   콘텐츠 지문(fingerprint)
 
-    -   콘텐츠 지문을 사용하면, 페이지의 콘텐츠에서 몇 바이트를 얻어내어 체크섬(checksum)을 계산합니다.
+    -   콘텐츠 지문을 사용하면, 페이지의 코넨츠에서 몇 바이트를 얻어내어 체크섬(checksum)을 계산합니다.
 
-        -   체크썸(checksum): 페이지의 내용을 간락하게한 표현
+        -   체크섬(checksum): 페이지의 내용을 간락하게한 표현
             -   체크섬 함수: MD5와 같은 메시지 요약 함수
 
-    -   만약 크롤러가 체크섬(checksum)이 같은 페이지에 가게 된다면 크롤링을 하지 않습니다.
+    -   만약 크롤러가 체크섬(checksum)이 같은 페이지게 가게 된다면 크롤링을 하지 않습니다.
 
 ## 9.2 로봇의 HTTP
 
@@ -141,7 +141,7 @@
 
 ### 9.2.1 요청 헤더 식별하기
 
--   최소한의 HTTP를 지원하려고 함에도, 대부분은 약간의 신원 식별 헤더(특히 User-Agent HTTP 헤더)를 구현하고 전송합니다.
+-   최소한의 HTTP를 지원하려고 함에도, 대부분은 약간의 신원 실별 헤더(특히 User-Agent HTTP 헤더)를 구현하고 전송합니다.
 -   크롤러들은 크롤러의 능력, 신원, 출신을 알려주는 기본적인 몇 가지 헤드를 사이트에게 보내주는게 좋습니다.
 -   다음은 크롤러들이 가지도록 권장되는 기본적인 신원 식별 헤더들입니다.
 
@@ -164,7 +164,7 @@
 
 ### 9.2.3 조건부 요청
 
--   크롤러들이 극악의 양을 요청을 시도한다는 것을 고려할 때, 검색하는 콘텐츠의 양을 최소하하는 것은 상당히 의미 있는 일입니다.
+-   크롤러들이 극악의 양을 요청을 시도한다는 것을 고려할 때, 검색하는 콘텐츠의 양을 최소화하는 것은 상당희 의미 있는 일입니다.
 -   그 방법중에는, 시간이나 엔터티 태그를 비교함으로써 그들이 받아간 마지막 버전 이후에 업데이트 된것이 있는지 알아보는 HTTP 요청을 만드는 것입니다. (이는 7장 캐시의 재검사 방법과 유사합니다.)
 
 ### 9.2.4 응답 다루기
@@ -179,9 +179,9 @@
     -   HTTP 헤더에 임베딩된 정보를 따라 로봇들은 엔터티 자체의 정보를 찾을 수 있습니다.
     -   메타 http-equiv 태그와 같은 메타 HTML 태그는 리소스에 대해 콘텐츠 저자가 포함시킨 정보입니다.
 
-### 9.2.5 User-Agent 타기팅
+### 9.2.5 User-Agent targeting
 
--   웹 관리자들은 많은 크롤러들이 그들의 사이트를 방문하게 될 것임을 명심하고, 크롤러들의 요청을 예상해야 합니다.
+-   웹 관리자들은 많은 크롤러들이 그들의 사이트를 방문하게 될 것임을 명심하고, 클롤러들의 요청을 예상해야 합니다.
 
 ## 9.3 부적절하게 동작하는 로봇들
 
@@ -203,11 +203,11 @@
     -   크롤러들이 사적인 데이터에 대한 URL을 얻어 그 데이터를 인터넷 검색엔진이나 기타 애플리케이션을 통해 쉽게 접근할 수 있도록 만들 수도 있습니다.
 
 -   동적 게이트웨이 접근
-    -   웹 사이트의 동적인 컨텐츠를 처리하기 위해 크롤러들이 계속해서 요청을 보내는건 웹 서버에 부담이 될 수 있ㅅ브니다.
+    -   웹 사이트의 동적인 컨텐츠를 처리하기 위해 크롤러들이 계속해서 요청을 보내는건 웹 서버에 부담이 될 수 있습니다.
 
 ## 9.4 로봇 차단하기
 
--   1994년, 크롤러들이 그륻에게 맞지 않는 장소에 들어오지 않도록 하고 웹 마스터에게 크롤러의 동작을 더 잘제어할 수 있는 메커니즘을 제공하는 단순하고 자발적인 기법이 제안되었습니다.
+-   1994년, 크롤러들이 그들에게 맞지 않는 장소에 들어오지 않도록 하고 웹 마스터에게 크롤러의 동작을 더 잘 제어할 수 있는 메커니즘을 제공하는 단순하고 자발적인 기법이 제안되었습니다.
 -   이 표준은 "Robots Exclusion Standard"라고 이름 지어졌지만, 크롤러의 접근을 제어하는 정보를 저장하는 파일의 이름을 따서 robots.txt라고 불립니다.
 
 ### robots.txt
@@ -248,7 +248,7 @@
 
     -   만약 요청 시도가 일시적으로 실패했다면(HTTP 상태 코드 503) 크롤러는 그 사이트의 리소스를 검색하는 것은 뒤로 미루어야 합니다.
 
-    -   만약 서버 응답이 리다이렉션을 의마한다면(HTTP 상태 코드 3xx) 로봇은 리소스가 별견될 때까지 리다이렉트를 따라가야 합니다.
+    -   만약 서버 응답이 리다이렉션을 의미한다면(HTTP 상태 코드 3xx) 로봇은 리소스가 별견될 때까지 리다이렉트를 따라가야 합니다.
 
 ### 9.4.3 robots.txt 파일 포맷
 
@@ -291,7 +291,7 @@
 
 -   Disallow/Allow를 매칭하는 방법은 다음과 같은 접두 매칭(prefix matching)이 사용됩니다.
 
-    <img width="581" alt="스크린샷 2019-03-11 오후 10 57 45" src="https://user-images.githubusercontent.com/44794974/54130877-8f157300-4454-11e9-9fd4-dc7f5a5f4699.png">
+    <img width="581" alt="스크린샷 2019-03-11 오후 10 57 45" src="https://user-images.githubusercontent.com/44794974/54130877-8f157300-4454-11e9-9fd4-dc7f5a5f4699.png">
 
 ### 9.4.4 그 외에 알아둘 점
 
@@ -299,15 +299,15 @@
 
 -   하위 호환성을 위해, 한 줄을 여러 줄로 나누어 적는 것은 허용되지 않습니다.
 
--   주석은 파일의 어디세서든 허용됩니다.
+-   주석은 파일의 어디에서든 허용됩니다.
 
 ### 9.4.5 robots.txt의 캐싱과 만료
 
 -   크롤러는 robots.txt를 캐시해두어 파일이 만료되기 전까지 사용하게 됩니다.
 
--   캐싱을 제어하기 우해 표준 HTTP 캐시 제어 메커니즙이 원 서버와 크롤러 양쪽 모두에 의해 사용됩니다.(로봇은 HTTP 응답의 Cache-Control과 Expires 헤더에 주의를 기울여야 합니다.)
+-   캐싱을 제어하기 우해 표준 HTTP 캐시 제어 메커니즘이 원 서버와 크롤러 양쪽 모두에 의해 사용됩니다.(로봇은 HTTP 응답의 Cache-Control과 Expires 헤더에 주의를 기울여야 합니다.)
 
-~~~9.4.6 크롤러 차단 펄 코드~~~ -> 라이브러리에 대한 설명으로 스킵하겠습니다.
+~~~9.4.6 크롤러 차단 펄 코드~~~ -> 라이브러리에 대한 설명으로 스킵하게 습니다.
 
 ### 9.4.7 HTML 크롤러 제어 META 태그
 
@@ -335,7 +335,7 @@
 
 -   INDEX
 
-    -   크롤러에게 이 페이지의 콘턴츠를 인덱싱해도 된다고 말해줍니다.
+    -   크롤러에게 이 페이지의 콘텐츠를 인덱싱해도 된다고 말해줍니다.
 
 -   FOLLOW
 
@@ -372,7 +372,7 @@
 
 -   다음 표에서 제시한 것을 포함하여 다른 많은 META 태그들은 검색엔진 크롤러들에 대해 유용하게 사용할 수 있습니다.
 
-    <img width="584" alt="스크린샷 2019-03-12 오전 12 05 18" src="https://user-images.githubusercontent.com/44794974/54134086-a0617e00-445a-11e9-93d0-222fed0221d1.png">
+    <img width="584" alt="스크린샷 2019-03-12 오전 12 05 18" src="https://user-images.githubusercontent.com/44794974/54134086-a0617e00-445a-11e9-93d0-222fed0221d1.png">
 
 ~~~9.5 로봇 에티켓~~ -> 크롤러의 가이드라인 이므로 스킵하겠습니다.
 
@@ -384,15 +384,15 @@
 
 -   오늘날 검색엔진들은 웹페이지들에 대해 '풀 텍스트 색인(full-text indexs)'이라고 하는 복잡한 로컬 데이터베이스를 생성합니다.
 
--   이 색인은 웹의 모든 문서에 대한 일종의 카드 카탈로그러럼 동작합니다.
+-   이 색인은 웹의 모든 문서에 대한 일종의 카드 카탈로그처럼 동작합니다.
 
-    <img width="553" alt="스크린샷 2019-03-12 오전 12 14 42" src="https://user-images.githubusercontent.com/44794974/54134734-d8b58c00-445b-11e9-9aec-09c05154c426.png">
+    <img width="553" alt="스크린샷 2019-03-12 오전 12 14 42" src="https://user-images.githubusercontent.com/44794974/54134734-d8b58c00-445b-11e9-9aec-09c05154c426.png">
 
 ### 9.6.3 풀 텍스트 색인
 
 -   **풀 텍스트 색인**은 단어 하나를 입력받아 그 단어를 포함하고 있는 문서를 즉각 알려줄 수 있는 데이터베이스입니다.
 
-    <img width="339" alt="스크린샷 2019-03-12 오전 12 16 47" src="https://user-images.githubusercontent.com/44794974/54134914-27632600-445c-11e9-8d23-7c27bdefb535.png">
+    <img width="339" alt="스크린샷 2019-03-12 오전 12 16 47" src="https://user-images.githubusercontent.com/44794974/54134914-27632600-445c-11e9-8d23-7c27bdefb535.png">
 
 -   위 예제를 예를 들면,
 
@@ -405,9 +405,9 @@
 
 -   사용자는 HTML폼을 채워, HTTP GET 또는 POST 요청을 이용해서 게이트웨이로 보냅니다.
 
--   게이트웨이 프로그램은 검색 질의를 추출하고 웹 UI 질의를 풀 텍스트 색인을 검색할 때 사용도는 표현식으로 변환 합니다.
+-   게이트웨이 프로그램은 검색 질의를 추출하고 웹 UI 질의를 풀 텍스트 색인을 검색할 때 사용되는 표현식으로 변환 합니다.
 
-    <img width="479" alt="스크린샷 2019-03-12 오전 12 28 52" src="https://user-images.githubusercontent.com/44794974/54135801-d5bb9b00-445d-11e9-9ca7-6ae8a5665194.png">
+    <img width="479" alt="스크린샷 2019-03-12 오전 12 28 52" src="https://user-images.githubusercontent.com/44794974/54135801-d5bb9b00-445d-11e9-9ca7-6ae8a5665194.png">
 
 ### 9.6.5 검색 결과를 정렬하고 보여주기
 
@@ -419,5 +419,5 @@
 
 ### 9.6.6 스푸핑
 
--   검색 결과에서 더 높은 순위를 차지하고자 하는 웹 마스터들의 노력은 검색 시스템과의 줄다리기를 만들어 냅니다.
+-   검색 결과에서 더 높은 쉬위를 차지하고자 하는 웹 마스터들의 노력은 검색 시스템과의 줄다리기를 만들어 냅니다.
     (ex, 수많은 키워드들을 나열한 가짜 페이지 만들기, 검색 엔진의 관련도 알고리즘을 더 잘 속일 수 있는, 특정 단어에 대한 가짜 페이지를 생성하는 게이트 웨이 애플리케이션 생성)
