--- a/2부 - HTTP 아키텍처/9. 웹 로봇.md
+++ b/2부 - HTTP 아키텍처/9. 웹 로봇.md
@@ -22,7 +22,7 @@
 
 ### 9.1.2 링크 추출과 상대 링크 정상화
 
--   크롤러가 HTML 문서를 탐색할때 시로운 링크를 찾게 되면, 크롤링할 페이지 목록에 추가하게 됩니다.
+-   크롤러가 HTML 문서를 탐색할때 새로운 링크를 찾게 되면, 크롤링할 페이지 목록에 추가하게 됩니다.
 
 -   이 때, 링크가 상대 링크로 되있을 경우 **절대 링크**로 변환할 필요가 있습니다.
 
@@ -49,7 +49,7 @@
         -   크롤러가 갑자기 중단되었을 경우, 방문한 URL의 목록이 디스크에 저장되었는지 확인합니다.
 
     -   파티셔닝
-        -   웹이 성장하면서, 한 대의 컴퓨터에서 하나의 크롤링이 완수하는 것은 불강능 해졌습니다.
+        -   웹이 성장하면서, 한 대의 컴퓨터에서 하나의 크롤링이 완수하는 것은 불가능 해졌습니다.
         -   대규모 웹 크롤러는, 각각이 분리된 한 대의 컴퓨터인 크롤러가 동시에 다른 '한 부분'을 할당하여 책임을 지도록 해야 합니다.
 
 ### 9.1.6 별칭(alias)과 로봇 순환
@@ -96,7 +96,7 @@
 
 ~~### 9.1.9 동적 가상 웹 공간~~ -> 가상 URL을 만들어 크롤러를 교착 상태로 빠진다는 말을 장황하게 써두었습니다.
 
-### 9.1.10
+### 9.1.10 루프와 중복 피하기
 
 -   정규화
 
@@ -106,9 +106,9 @@
 
     -   방문할 URL들을 깊이 우선 방식보다 너비 우선 방식을 사용한다면 순환의 영향을 최소화 할 수 있습니다.
 
--   스토틀링
+-   스로틀링
 
-    -   로봇이 웹 사이트에서 일정 시간 동안 가져올 수 있는 페이지의 숫자를 제한합니다.
+    -   크롤러가 웹 사이트에서 일정 시간 동안 가져올 수 있는 페이지의 숫자를 제한합니다.
 
 -   URL 크기 제한
 
