--- a/2부 - HTTP 아키텍처/9. 웹 로봇.md
+++ b/2부 - HTTP 아키텍처/9. 웹 로봇.md
@@ -127,12 +127,12 @@
 
 -   콘텐츠 지문(fingerprint)
 
-    -   콘텐츠 지문을 사용하면, 페이지의 코넨츠에서 몇 바이트를 얻어내어 체크섬(checksum)을 계산합니다.
+    -   콘텐츠 지문을 사용하면, 페이지의 코텐츠에서 몇 바이트를 얻어내어 체크섬(checksum)을 계산합니다.
 
         -   체크섬(checksum): 페이지의 내용을 간락하게한 표현
             -   체크섬 함수: MD5와 같은 메시지 요약 함수
 
-    -   만약 크롤러가 체크섬(checksum)이 같은 페이지게 가게 된다면 크롤링을 하지 않습니다.
+    -   만약 크롤러가 체크섬(checksum)이 같은 페이지에 가게 된다면 크롤링을 하지 않습니다.
 
 ## 9.2 로봇의 HTTP
 
@@ -141,7 +141,7 @@
 
 ### 9.2.1 요청 헤더 식별하기
 
--   최소한의 HTTP를 지원하려고 함에도, 대부분은 약간의 신원 실별 헤더(특히 User-Agent HTTP 헤더)를 구현하고 전송합니다.
+-   최소한의 HTTP를 지원하려고 함에도, 대부분은 약간의 신원 식별 헤더(특히 User-Agent HTTP 헤더)를 구현하고 전송합니다.
 -   크롤러들은 크롤러의 능력, 신원, 출신을 알려주는 기본적인 몇 가지 헤드를 사이트에게 보내주는게 좋습니다.
 -   다음은 크롤러들이 가지도록 권장되는 기본적인 신원 식별 헤더들입니다.
 
@@ -164,7 +164,7 @@
 
 ### 9.2.3 조건부 요청
 
--   크롤러들이 극악의 양을 요청을 시도한다는 것을 고려할 때, 검색하는 콘텐츠의 양을 최소화하는 것은 상당희 의미 있는 일입니다.
+-   크롤러들이 극악의 양을 요청을 시도한다는 것을 고려할 때, 검색하는 콘텐츠의 양을 최소화하는 것은 상당히 의미 있는 일입니다.
 -   그 방법중에는, 시간이나 엔터티 태그를 비교함으로써 그들이 받아간 마지막 버전 이후에 업데이트 된것이 있는지 알아보는 HTTP 요청을 만드는 것입니다. (이는 7장 캐시의 재검사 방법과 유사합니다.)
 
 ### 9.2.4 응답 다루기
@@ -181,7 +181,7 @@
 
 ### 9.2.5 User-Agent targeting
 
--   웹 관리자들은 많은 크롤러들이 그들의 사이트를 방문하게 될 것임을 명심하고, 클롤러들의 요청을 예상해야 합니다.
+-   웹 관리자들은 많은 크롤러들이 그들의 사이트를 방문하게 될 것임을 명심하고, 크롤러들의 요청을 예상해야 합니다.
 
 ## 9.3 부적절하게 동작하는 로봇들
 
@@ -307,7 +307,7 @@
 
 -   캐싱을 제어하기 우해 표준 HTTP 캐시 제어 메커니즘이 원 서버와 크롤러 양쪽 모두에 의해 사용됩니다.(로봇은 HTTP 응답의 Cache-Control과 Expires 헤더에 주의를 기울여야 합니다.)
 
-~~~9.4.6 크롤러 차단 펄 코드~~~ -> 라이브러리에 대한 설명으로 스킵하게 습니다.
+~~~9.4.6 크롤러 차단 펄 코드~~~ -> 라이브러리에 대한 설명으로 스킵하겠습니다.
 
 ### 9.4.7 HTML 크롤러 제어 META 태그
 
@@ -419,5 +419,5 @@
 
 ### 9.6.6 스푸핑
 
--   검색 결과에서 더 높은 쉬위를 차지하고자 하는 웹 마스터들의 노력은 검색 시스템과의 줄다리기를 만들어 냅니다.
+-   검색 결과에서 더 높은 순위를 차지하고자 하는 웹 마스터들의 노력은 검색 시스템과의 줄다리기를 만들어 냅니다.
     (ex, 수많은 키워드들을 나열한 가짜 페이지 만들기, 검색 엔진의 관련도 알고리즘을 더 잘 속일 수 있는, 특정 단어에 대한 가짜 페이지를 생성하는 게이트 웨이 애플리케이션 생성)
